@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,11 +21,12 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.gradle.api.DefaultTask;
 import org.gradle.api.Task;
+import org.gradle.api.file.DirectoryProperty;
+import org.gradle.api.file.RegularFileProperty;
+import org.gradle.api.provider.MapProperty;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFile;
 import org.gradle.api.tasks.OutputDirectory;
@@ -40,46 +41,22 @@ import org.springframework.boot.build.mavenplugin.PluginXmlParser.Plugin;
  *
  * @author Andy Wilkinson
  */
-public class DocumentPluginGoals extends DefaultTask {
+public abstract class DocumentPluginGoals extends DefaultTask {
 
 	private final PluginXmlParser parser = new PluginXmlParser();
 
-	private File pluginXml;
-
-	private File outputDir;
-
-	private Map<String, String> goalSections;
-
 	@OutputDirectory
-	public File getOutputDir() {
-		return this.outputDir;
-	}
-
-	public void setOutputDir(File outputDir) {
-		this.outputDir = outputDir;
-	}
+	public abstract DirectoryProperty getOutputDir();
 
 	@Input
-	public Map<String, String> getGoalSections() {
-		return this.goalSections;
-	}
-
-	public void setGoalSections(Map<String, String> goalSections) {
-		this.goalSections = goalSections;
-	}
+	public abstract MapProperty<String, String> getGoalSections();
 
 	@InputFile
-	public File getPluginXml() {
-		return this.pluginXml;
-	}
-
-	public void setPluginXml(File pluginXml) {
-		this.pluginXml = pluginXml;
-	}
+	public abstract RegularFileProperty getPluginXml();
 
 	@TaskAction
 	public void documentPluginGoals() throws IOException {
-		Plugin plugin = this.parser.parse(this.pluginXml);
+		Plugin plugin = this.parser.parse(getPluginXml().getAsFile().get());
 		writeOverview(plugin);
 		for (Mojo mojo : plugin.getMojos()) {
 			documentMojo(plugin, mojo);
@@ -87,13 +64,14 @@ public class DocumentPluginGoals extends DefaultTask {
 	}
 
 	private void writeOverview(Plugin plugin) throws IOException {
-		try (PrintWriter writer = new PrintWriter(new FileWriter(new File(this.outputDir, "overview.adoc")))) {
+		try (PrintWriter writer = new PrintWriter(
+				new FileWriter(new File(getOutputDir().getAsFile().get(), "overview.adoc")))) {
 			writer.println("[cols=\"1,3\"]");
 			writer.println("|===");
 			writer.println("| Goal | Description");
 			writer.println();
 			for (Mojo mojo : plugin.getMojos()) {
-				writer.printf("| <<%s,%s:%s>>%n", goalSectionId(mojo), plugin.getGoalPrefix(), mojo.getGoal());
+				writer.printf("| xref:%s[%s:%s]%n", goalSectionId(mojo, false), plugin.getGoalPrefix(), mojo.getGoal());
 				writer.printf("| %s%n", mojo.getDescription());
 				writer.println();
 			}
@@ -102,55 +80,55 @@ public class DocumentPluginGoals extends DefaultTask {
 	}
 
 	private void documentMojo(Plugin plugin, Mojo mojo) throws IOException {
-		try (PrintWriter writer = new PrintWriter(new FileWriter(new File(this.outputDir, mojo.getGoal() + ".adoc")))) {
-			String sectionId = goalSectionId(mojo);
-			writer.println();
-			writer.println();
+		try (PrintWriter writer = new PrintWriter(
+				new FileWriter(new File(getOutputDir().getAsFile().get(), mojo.getGoal() + ".adoc")))) {
+			String sectionId = goalSectionId(mojo, true);
 			writer.printf("[[%s]]%n", sectionId);
-			writer.printf("= `%s:%s`%n", plugin.getGoalPrefix(), mojo.getGoal());
+			writer.printf("= `%s:%s`%n%n", plugin.getGoalPrefix(), mojo.getGoal());
 			writer.printf("`%s:%s:%s`%n", plugin.getGroupId(), plugin.getArtifactId(), plugin.getVersion());
 			writer.println();
 			writer.println(mojo.getDescription());
-			List<Parameter> parameters = mojo.getParameters()
-				.stream()
-				.filter(Parameter::isEditable)
-				.collect(Collectors.toList());
-			List<Parameter> requiredParameters = parameters.stream()
-				.filter(Parameter::isRequired)
-				.collect(Collectors.toList());
+			List<Parameter> parameters = mojo.getParameters().stream().filter(Parameter::isEditable).toList();
+			List<Parameter> requiredParameters = parameters.stream().filter(Parameter::isRequired).toList();
 			String detailsSectionId = sectionId + ".parameter-details";
 			if (!requiredParameters.isEmpty()) {
 				writer.println();
 				writer.println();
+				writer.println();
 				writer.printf("[[%s.required-parameters]]%n", sectionId);
 				writer.println("== Required parameters");
+				writer.println();
 				writeParametersTable(writer, detailsSectionId, requiredParameters);
 			}
 			List<Parameter> optionalParameters = parameters.stream()
 				.filter((parameter) -> !parameter.isRequired())
-				.collect(Collectors.toList());
+				.toList();
 			if (!optionalParameters.isEmpty()) {
+				writer.println();
 				writer.println();
 				writer.println();
 				writer.printf("[[%s.optional-parameters]]%n", sectionId);
 				writer.println("== Optional parameters");
+				writer.println();
 				writeParametersTable(writer, detailsSectionId, optionalParameters);
 			}
 			writer.println();
 			writer.println();
+			writer.println();
 			writer.printf("[[%s]]%n", detailsSectionId);
 			writer.println("== Parameter details");
+			writer.println();
 			writeParameterDetails(writer, parameters, detailsSectionId);
 		}
 	}
 
-	private String goalSectionId(Mojo mojo) {
-		String goalSection = this.goalSections.get(mojo.getGoal());
+	private String goalSectionId(Mojo mojo, boolean innerReference) {
+		String goalSection = getGoalSections().getting(mojo.getGoal()).get();
 		if (goalSection == null) {
 			throw new IllegalStateException("Goal '" + mojo.getGoal() + "' has not be assigned to a section");
 		}
 		String sectionId = goalSection + "." + mojo.getGoal() + "-goal";
-		return sectionId;
+		return (!innerReference) ? goalSection + "#" + sectionId : sectionId;
 	}
 
 	private void writeParametersTable(PrintWriter writer, String detailsSectionId, List<Parameter> parameters) {
@@ -160,7 +138,7 @@ public class DocumentPluginGoals extends DefaultTask {
 		writer.println();
 		for (Parameter parameter : parameters) {
 			String name = parameter.getName();
-			writer.printf("| <<%s.%s,%s>>%n", detailsSectionId, parameterId(name), name);
+			writer.printf("| xref:#%s.%s[%s]%n", detailsSectionId, parameterId(name), name);
 			writer.printf("| `%s`%n", typeNameToJavadocLink(shortTypeName(parameter.getType()), parameter.getType()));
 			String defaultValue = parameter.getDefaultValue();
 			if (defaultValue != null) {
@@ -242,10 +220,10 @@ public class DocumentPluginGoals extends DefaultTask {
 
 	private String typeNameToJavadocLink(String shortName, String name) {
 		if (name.startsWith("org.springframework.boot.maven")) {
-			return "{spring-boot-docs}/maven-plugin/api/" + typeNameToJavadocPath(name) + ".html[" + shortName + "]";
+			return "xref:maven-plugin:api/java/" + typeNameToJavadocPath(name) + ".html[" + shortName + "]";
 		}
 		if (name.startsWith("org.springframework.boot")) {
-			return "{spring-boot-docs}/api/" + typeNameToJavadocPath(name) + ".html[" + shortName + "]";
+			return "xref:api:java/" + typeNameToJavadocPath(name) + ".html[" + shortName + "]";
 		}
 		return shortName;
 	}
