@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +17,9 @@
 package org.springframework.boot.actuate.autoconfigure.endpoint;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.boot.actuate.endpoint.EndpointAccessResolver;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
 import org.springframework.boot.actuate.endpoint.annotation.EndpointConverter;
 import org.springframework.boot.actuate.endpoint.invoke.ParameterValueMapper;
@@ -52,9 +52,8 @@ public class EndpointAutoConfiguration {
 	public ParameterValueMapper endpointOperationParameterMapper(
 			@EndpointConverter ObjectProvider<Converter<?, ?>> converters,
 			@EndpointConverter ObjectProvider<GenericConverter> genericConverters) {
-		ConversionService conversionService = createConversionService(
-				converters.orderedStream().collect(Collectors.toList()),
-				genericConverters.orderedStream().collect(Collectors.toList()));
+		ConversionService conversionService = createConversionService(converters.orderedStream().toList(),
+				genericConverters.orderedStream().toList());
 		return new ConversionServiceParameterValueMapper(conversionService);
 	}
 
@@ -73,6 +72,12 @@ public class EndpointAutoConfiguration {
 	@ConditionalOnMissingBean
 	public CachingOperationInvokerAdvisor endpointCachingOperationInvokerAdvisor(Environment environment) {
 		return new CachingOperationInvokerAdvisor(new EndpointIdTimeToLivePropertyFunction(environment));
+	}
+
+	@Bean
+	@ConditionalOnMissingBean(EndpointAccessResolver.class)
+	PropertiesEndpointAccessResolver propertiesEndpointAccessResolver(Environment environment) {
+		return new PropertiesEndpointAccessResolver(environment);
 	}
 
 }
