@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 
 package org.springframework.boot.actuate.autoconfigure.scheduling;
-
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.autoconfigure.endpoint.condition.ConditionalOnAvailableEndpoint;
@@ -34,13 +32,13 @@ import org.springframework.scheduling.config.ScheduledTaskHolder;
  * @since 2.0.0
  */
 @AutoConfiguration
-@ConditionalOnAvailableEndpoint(endpoint = ScheduledTasksEndpoint.class)
+@ConditionalOnAvailableEndpoint(ScheduledTasksEndpoint.class)
 public class ScheduledTasksEndpointAutoConfiguration {
 
 	@Bean
 	@ConditionalOnMissingBean
 	public ScheduledTasksEndpoint scheduledTasksEndpoint(ObjectProvider<ScheduledTaskHolder> holders) {
-		return new ScheduledTasksEndpoint(holders.orderedStream().collect(Collectors.toList()));
+		return new ScheduledTasksEndpoint(holders.orderedStream().toList());
 	}
 
 }
