@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLException;
 
@@ -51,7 +50,6 @@ import org.springframework.boot.autoconfigure.http.HttpMessageConvertersAutoConf
 import org.springframework.boot.autoconfigure.info.ProjectInfoAutoConfiguration;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
 import org.springframework.boot.autoconfigure.security.reactive.ReactiveSecurityAutoConfiguration;
-import org.springframework.boot.autoconfigure.security.reactive.ReactiveUserDetailsServiceAutoConfiguration;
 import org.springframework.boot.autoconfigure.web.reactive.WebFluxAutoConfiguration;
 import org.springframework.boot.autoconfigure.web.reactive.function.client.WebClientAutoConfiguration;
 import org.springframework.boot.test.context.runner.ReactiveWebApplicationContextRunner;
@@ -62,6 +60,8 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.mock.http.server.reactive.MockServerHttpRequest;
 import org.springframework.mock.web.server.MockServerWebExchange;
+import org.springframework.security.core.userdetails.MapReactiveUserDetailsService;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import org.springframework.security.web.server.WebFilterChainProxy;
 import org.springframework.test.util.ReflectionTestUtils;
@@ -85,15 +85,16 @@ class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 	private static final String V3_JSON = ApiVersion.V3.getProducedMimeType().toString();
 
 	private final ReactiveWebApplicationContextRunner contextRunner = new ReactiveWebApplicationContextRunner()
-		.withConfiguration(AutoConfigurations.of(ReactiveSecurityAutoConfiguration.class,
-				ReactiveUserDetailsServiceAutoConfiguration.class, WebFluxAutoConfiguration.class,
-				JacksonAutoConfiguration.class, HttpMessageConvertersAutoConfiguration.class,
-				PropertyPlaceholderAutoConfiguration.class, WebClientCustomizerConfig.class,
-				WebClientAutoConfiguration.class, ManagementContextAutoConfiguration.class,
-				EndpointAutoConfiguration.class, WebEndpointAutoConfiguration.class,
-				HealthContributorAutoConfiguration.class, HealthEndpointAutoConfiguration.class,
-				InfoContributorAutoConfiguration.class, InfoEndpointAutoConfiguration.class,
-				ProjectInfoAutoConfiguration.class, ReactiveCloudFoundryActuatorAutoConfiguration.class));
+		.withConfiguration(
+				AutoConfigurations.of(ReactiveSecurityAutoConfiguration.class, WebFluxAutoConfiguration.class,
+						JacksonAutoConfiguration.class, HttpMessageConvertersAutoConfiguration.class,
+						PropertyPlaceholderAutoConfiguration.class, WebClientCustomizerConfig.class,
+						WebClientAutoConfiguration.class, ManagementContextAutoConfiguration.class,
+						EndpointAutoConfiguration.class, WebEndpointAutoConfiguration.class,
+						HealthContributorAutoConfiguration.class, HealthEndpointAutoConfiguration.class,
+						InfoContributorAutoConfiguration.class, InfoEndpointAutoConfiguration.class,
+						ProjectInfoAutoConfiguration.class, ReactiveCloudFoundryActuatorAutoConfiguration.class))
+		.withUserConfiguration(UserDetailsServiceConfiguration.class);
 
 	private static final String BASE_PATH = "/cloudfoundryapplication";
 
@@ -206,10 +207,9 @@ class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 	}
 
 	private static Boolean getMatches(List<SecurityWebFilterChain> filters, String urlTemplate) {
-		Boolean cfBaseRequestMatches = filters.get(0)
+		return filters.get(0)
 			.matches(MockServerWebExchange.from(MockServerHttpRequest.get(urlTemplate).build()))
 			.block(Duration.ofSeconds(30));
-		return cfBaseRequestMatches;
 	}
 
 	@Test
@@ -232,9 +232,7 @@ class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 			.run((context) -> {
 				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
 				Collection<ExposableWebEndpoint> endpoints = handlerMapping.getEndpoints();
-				List<EndpointId> endpointIds = endpoints.stream()
-					.map(ExposableWebEndpoint::getEndpointId)
-					.collect(Collectors.toList());
+				List<EndpointId> endpointIds = endpoints.stream().map(ExposableWebEndpoint::getEndpointId).toList();
 				assertThat(endpointIds).contains(EndpointId.of("test"));
 			});
 	}
@@ -297,12 +295,21 @@ class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 				Object interceptorSecurityService = ReflectionTestUtils.getField(interceptor,
 						"cloudFoundrySecurityService");
 				WebClient webClient = (WebClient) ReflectionTestUtils.getField(interceptorSecurityService, "webClient");
-				webClient.get()
+				doesNotFailWithSslException(() -> webClient.get()
 					.uri("https://self-signed.badssl.com/")
 					.retrieve()
 					.toBodilessEntity()
-					.block(Duration.ofSeconds(30));
+					.block(Duration.ofSeconds(30)));
 			});
+	}
+
+	private static void doesNotFailWithSslException(Runnable action) {
+		try {
+			action.run();
+		}
+		catch (RuntimeException ex) {
+			assertThat(findCause(ex, SSLException.class)).isNull();
+		}
 	}
 
 	@Test
@@ -342,6 +349,16 @@ class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 				"No operation found with request path " + requestPath + " from " + endpoint.getOperations());
 	}
 
+	private static <E extends Throwable> E findCause(Throwable failure, Class<E> type) {
+		while (failure != null) {
+			if (type.isInstance(failure)) {
+				return type.cast(failure);
+			}
+			failure = failure.getCause();
+		}
+		return null;
+	}
+
 	@Endpoint(id = "test")
 	static class TestEndpoint {
 
@@ -358,6 +375,17 @@ class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 		@Bean
 		WebClientCustomizer webClientCustomizer() {
 			return mock(WebClientCustomizer.class);
+		}
+
+	}
+
+	@Configuration(proxyBeanMethods = false)
+	static class UserDetailsServiceConfiguration {
+
+		@Bean
+		MapReactiveUserDetailsService userDetailsService() {
+			return new MapReactiveUserDetailsService(
+					User.withUsername("alice").password("secret").roles("admin").build());
 		}
 
 	}
