@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.springframework.boot.actuate.autoconfigure.endpoint.web;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -28,12 +27,11 @@ import org.springframework.boot.actuate.autoconfigure.endpoint.expose.IncludeExc
 import org.springframework.boot.actuate.endpoint.ApiVersion;
 import org.springframework.boot.actuate.endpoint.EndpointId;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
+import org.springframework.boot.actuate.endpoint.annotation.ReadOperation;
 import org.springframework.boot.actuate.endpoint.web.EndpointMediaTypes;
 import org.springframework.boot.actuate.endpoint.web.ExposableWebEndpoint;
 import org.springframework.boot.actuate.endpoint.web.PathMappedEndpoint;
 import org.springframework.boot.actuate.endpoint.web.PathMapper;
-import org.springframework.boot.actuate.endpoint.web.annotation.ControllerEndpointDiscoverer;
-import org.springframework.boot.actuate.endpoint.web.annotation.ServletEndpointDiscoverer;
 import org.springframework.boot.actuate.endpoint.web.annotation.WebEndpointDiscoverer;
 import org.springframework.boot.autoconfigure.AutoConfigurations;
 import org.springframework.boot.test.context.runner.ApplicationContextRunner;
@@ -90,17 +88,17 @@ class WebEndpointAutoConfigurationTests {
 				WebEndpointDiscoverer discoverer = context.getBean(WebEndpointDiscoverer.class);
 				Collection<ExposableWebEndpoint> endpoints = discoverer.getEndpoints();
 				ExposableWebEndpoint[] webEndpoints = endpoints.toArray(new ExposableWebEndpoint[0]);
-				List<String> paths = Arrays.stream(webEndpoints)
-					.map(PathMappedEndpoint::getRootPath)
-					.collect(Collectors.toList());
+				List<String> paths = Arrays.stream(webEndpoints).map(PathMappedEndpoint::getRootPath).toList();
 				assertThat(paths).containsOnly("1/testone", "foo", "testtwo");
 			});
 	}
 
 	@Test
+	@SuppressWarnings("removal")
 	void webApplicationConfiguresEndpointDiscoverer() {
 		this.contextRunner.run((context) -> {
-			assertThat(context).hasSingleBean(ControllerEndpointDiscoverer.class);
+			assertThat(context).hasSingleBean(
+					org.springframework.boot.actuate.endpoint.web.annotation.ControllerEndpointDiscoverer.class);
 			assertThat(context).hasSingleBean(WebEndpointDiscoverer.class);
 		});
 	}
@@ -112,14 +110,18 @@ class WebEndpointAutoConfigurationTests {
 	}
 
 	@Test
+	@SuppressWarnings("removal")
 	void contextShouldConfigureServletEndpointDiscoverer() {
-		this.contextRunner.run((context) -> assertThat(context).hasSingleBean(ServletEndpointDiscoverer.class));
+		this.contextRunner.run((context) -> assertThat(context)
+			.hasSingleBean(org.springframework.boot.actuate.endpoint.web.annotation.ServletEndpointDiscoverer.class));
 	}
 
 	@Test
+	@SuppressWarnings("removal")
 	void contextWhenNotServletShouldNotConfigureServletEndpointDiscoverer() {
 		new ApplicationContextRunner().withConfiguration(CONFIGURATIONS)
-			.run((context) -> assertThat(context).doesNotHaveBean(ServletEndpointDiscoverer.class));
+			.run((context) -> assertThat(context).doesNotHaveBean(
+					org.springframework.boot.actuate.endpoint.web.annotation.ServletEndpointDiscoverer.class));
 	}
 
 	@Component
@@ -128,7 +130,7 @@ class WebEndpointAutoConfigurationTests {
 		@Override
 		public String getRootPath(EndpointId endpointId) {
 			if (endpointId.toString().endsWith("one")) {
-				return "1/" + endpointId.toString();
+				return "1/" + endpointId;
 			}
 			return null;
 		}
@@ -139,17 +141,32 @@ class WebEndpointAutoConfigurationTests {
 	@Endpoint(id = "testone")
 	static class TestOneEndpoint {
 
+		@ReadOperation
+		String read() {
+			return "read";
+		}
+
 	}
 
 	@Component
 	@Endpoint(id = "testanotherone")
 	static class TestAnotherOneEndpoint {
 
+		@ReadOperation
+		String read() {
+			return "read";
+		}
+
 	}
 
 	@Component
 	@Endpoint(id = "testtwo")
 	static class TestTwoEndpoint {
+
+		@ReadOperation
+		String read() {
+			return "read";
+		}
 
 	}
 
