@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,10 @@
 
 package org.springframework.boot.actuate.autoconfigure.endpoint.web.documentation;
 
-import java.util.Arrays;
 import java.util.List;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.actuate.autoconfigure.condition.ConditionsReportEndpoint;
 import org.springframework.boot.autoconfigure.condition.ConditionEvaluationReport;
 import org.springframework.boot.autoconfigure.context.PropertyPlaceholderAutoConfiguration;
@@ -30,19 +27,14 @@ import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
-import org.springframework.restdocs.RestDocumentationContextProvider;
 import org.springframework.restdocs.mockmvc.MockMvcRestDocumentation;
 import org.springframework.restdocs.payload.FieldDescriptor;
 import org.springframework.restdocs.payload.JsonFieldType;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
-import org.springframework.web.context.WebApplicationContext;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.preprocessResponse;
 import static org.springframework.restdocs.payload.PayloadDocumentation.fieldWithPath;
 import static org.springframework.restdocs.payload.PayloadDocumentation.responseFields;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 /**
  * Tests for generating documentation describing {@link ConditionsReportEndpoint}.
@@ -51,26 +43,13 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
  */
 class ConditionsReportEndpointDocumentationTests extends MockMvcEndpointDocumentationTests {
 
-	private MockMvc mockMvc;
-
-	@Autowired
-	private WebApplicationContext applicationContext;
-
-	@Override
-	@BeforeEach
-	void setup(RestDocumentationContextProvider restDocumentation) {
-		this.mockMvc = MockMvcBuilders.webAppContextSetup(this.applicationContext)
-			.apply(MockMvcRestDocumentation.documentationConfiguration(restDocumentation).uris())
-			.build();
-	}
-
 	@Test
-	void conditions() throws Exception {
-		List<FieldDescriptor> positiveMatchFields = Arrays.asList(
+	void conditions() {
+		List<FieldDescriptor> positiveMatchFields = List.of(
 				fieldWithPath("").description("Classes and methods with conditions that were matched."),
 				fieldWithPath(".*.[].condition").description("Name of the condition."),
 				fieldWithPath(".*.[].message").description("Details of why the condition was matched."));
-		List<FieldDescriptor> negativeMatchFields = Arrays.asList(
+		List<FieldDescriptor> negativeMatchFields = List.of(
 				fieldWithPath("").description("Classes and methods with conditions that were not matched."),
 				fieldWithPath(".*.notMatched").description("Conditions that were matched."),
 				fieldWithPath(".*.notMatched.[].condition").description("Name of the condition."),
@@ -84,9 +63,8 @@ class ConditionsReportEndpointDocumentationTests extends MockMvcEndpointDocument
 					.optional());
 		FieldDescriptor unconditionalClassesField = fieldWithPath("contexts.*.unconditionalClasses")
 			.description("Names of unconditional auto-configuration classes if any.");
-		this.mockMvc.perform(get("/actuator/conditions"))
-			.andExpect(status().isOk())
-			.andDo(MockMvcRestDocumentation.document("conditions",
+		assertThat(this.mvc.get().uri("/actuator/conditions")).hasStatusOk()
+			.apply(MockMvcRestDocumentation.document("conditions",
 					preprocessResponse(limit("contexts", getApplicationContext().getId(), "positiveMatches"),
 							limit("contexts", getApplicationContext().getId(), "negativeMatches")),
 					responseFields(fieldWithPath("contexts").description("Application contexts keyed by id."))
@@ -104,7 +82,7 @@ class ConditionsReportEndpointDocumentationTests extends MockMvcEndpointDocument
 			ConditionEvaluationReport conditionEvaluationReport = ConditionEvaluationReport
 				.get(context.getBeanFactory());
 			conditionEvaluationReport
-				.recordEvaluationCandidates(Arrays.asList(PropertyPlaceholderAutoConfiguration.class.getName()));
+				.recordEvaluationCandidates(List.of(PropertyPlaceholderAutoConfiguration.class.getName()));
 			return new ConditionsReportEndpoint(context);
 		}
 
