@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 
 package org.springframework.boot.autoconfigure.cache;
-
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.ObjectProvider;
@@ -67,7 +65,7 @@ public class CacheAutoConfiguration {
 	@Bean
 	@ConditionalOnMissingBean
 	public CacheManagerCustomizers cacheManagerCustomizers(ObjectProvider<CacheManagerCustomizer<?>> customizers) {
-		return new CacheManagerCustomizers(customizers.orderedStream().collect(Collectors.toList()));
+		return new CacheManagerCustomizers(customizers.orderedStream().toList());
 	}
 
 	@Bean
@@ -104,7 +102,7 @@ public class CacheAutoConfiguration {
 
 		@Override
 		public void afterPropertiesSet() {
-			Assert.notNull(this.cacheManager.getIfAvailable(),
+			Assert.state(this.cacheManager.getIfAvailable() != null,
 					() -> "No cache manager could be auto-configured, check your configuration (caching type is '"
 							+ this.cacheProperties.getType() + "')");
 		}
