@@ -18,15 +18,15 @@ package org.springframework.boot.autoconfigure.security.oauth2.client.servlet;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import javax.servlet.Filter;
-
+import jakarta.servlet.Filter;
 import org.junit.jupiter.api.Test;
 
+import org.springframework.boot.autoconfigure.AutoConfigurations;
+import org.springframework.boot.autoconfigure.web.servlet.WebMvcAutoConfiguration;
 import org.springframework.boot.test.context.FilteredClassLoader;
-import org.springframework.boot.test.context.assertj.AssertableApplicationContext;
-import org.springframework.boot.test.context.runner.ApplicationContextRunner;
+import org.springframework.boot.test.context.assertj.AssertableWebApplicationContext;
+import org.springframework.boot.test.context.runner.WebApplicationContextRunner;
 import org.springframework.boot.web.embedded.tomcat.TomcatServletWebServerFactory;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -48,6 +48,7 @@ import org.springframework.security.web.FilterChainProxy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.util.ObjectUtils;
+import org.springframework.web.filter.CompositeFilter;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -58,7 +59,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  */
 class OAuth2WebSecurityConfigurationTests {
 
-	private final ApplicationContextRunner contextRunner = new ApplicationContextRunner();
+	private final WebApplicationContextRunner contextRunner = new WebApplicationContextRunner();
 
 	@Test
 	void securityConfigurerConfiguresOAuth2Login() {
@@ -68,7 +69,7 @@ class OAuth2WebSecurityConfigurationTests {
 			.run((context) -> {
 				ClientRegistrationRepository expected = context.getBean(ClientRegistrationRepository.class);
 				ClientRegistrationRepository actual = (ClientRegistrationRepository) ReflectionTestUtils.getField(
-						getFilters(context, OAuth2LoginAuthenticationFilter.class).get(0),
+						getSecurityFilters(context, OAuth2LoginAuthenticationFilter.class).get(0),
 						"clientRegistrationRepository");
 				assertThat(isEqual(expected.findByRegistrationId("first"), actual.findByRegistrationId("first")))
 					.isTrue();
@@ -85,7 +86,7 @@ class OAuth2WebSecurityConfigurationTests {
 			.run((context) -> {
 				ClientRegistrationRepository expected = context.getBean(ClientRegistrationRepository.class);
 				ClientRegistrationRepository actual = (ClientRegistrationRepository) ReflectionTestUtils.getField(
-						getFilters(context, OAuth2AuthorizationCodeGrantFilter.class).get(0),
+						getSecurityFilters(context, OAuth2AuthorizationCodeGrantFilter.class).get(0),
 						"clientRegistrationRepository");
 				assertThat(isEqual(expected.findByRegistrationId("first"), actual.findByRegistrationId("first")))
 					.isTrue();
@@ -98,8 +99,8 @@ class OAuth2WebSecurityConfigurationTests {
 	void securityConfigurerBacksOffWhenClientRegistrationBeanAbsent() {
 		this.contextRunner.withUserConfiguration(TestConfig.class, OAuth2WebSecurityConfiguration.class)
 			.run((context) -> {
-				assertThat(getFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
-				assertThat(getFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
+				assertThat(getSecurityFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
+				assertThat(getSecurityFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
 			});
 	}
 
@@ -120,23 +121,12 @@ class OAuth2WebSecurityConfigurationTests {
 	}
 
 	@Test
-	void securityFilterChainConfigBacksOffWhenOtherWebSecurityAdapterPresent() {
-		this.contextRunner
-			.withUserConfiguration(TestWebSecurityConfigurerConfig.class, OAuth2WebSecurityConfiguration.class)
-			.run((context) -> {
-				assertThat(getFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
-				assertThat(getFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
-				assertThat(context).getBean(OAuth2AuthorizedClientService.class).isNotNull();
-			});
-	}
-
-	@Test
 	void securityFilterChainConfigBacksOffWhenOtherSecurityFilterChainBeanPresent() {
-		this.contextRunner
-			.withUserConfiguration(TestSecurityFilterChainConfig.class, OAuth2WebSecurityConfiguration.class)
+		this.contextRunner.withConfiguration(AutoConfigurations.of(WebMvcAutoConfiguration.class))
+			.withUserConfiguration(TestSecurityFilterChainConfiguration.class, OAuth2WebSecurityConfiguration.class)
 			.run((context) -> {
-				assertThat(getFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
-				assertThat(getFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
+				assertThat(getSecurityFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
+				assertThat(getSecurityFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
 				assertThat(context).getBean(OAuth2AuthorizedClientService.class).isNotNull();
 			});
 	}
@@ -148,8 +138,8 @@ class OAuth2WebSecurityConfigurationTests {
 					OAuth2WebSecurityConfiguration.class)
 			.withClassLoader(new FilteredClassLoader(SecurityFilterChain.class))
 			.run((context) -> {
-				assertThat(getFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
-				assertThat(getFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
+				assertThat(getSecurityFilters(context, OAuth2LoginAuthenticationFilter.class)).isEmpty();
+				assertThat(getSecurityFilters(context, OAuth2AuthorizationCodeGrantFilter.class)).isEmpty();
 			});
 	}
 
@@ -175,11 +165,29 @@ class OAuth2WebSecurityConfigurationTests {
 			});
 	}
 
-	private List<Filter> getFilters(AssertableApplicationContext context, Class<? extends Filter> filter) {
-		FilterChainProxy filterChain = (FilterChainProxy) context.getBean(BeanIds.SPRING_SECURITY_FILTER_CHAIN);
-		List<SecurityFilterChain> filterChains = filterChain.getFilterChains();
-		List<Filter> filters = filterChains.get(0).getFilters();
-		return filters.stream().filter(filter::isInstance).collect(Collectors.toList());
+	private List<Filter> getSecurityFilters(AssertableWebApplicationContext context, Class<? extends Filter> filter) {
+		return getSecurityFilterChain(context).getFilters().stream().filter(filter::isInstance).toList();
+	}
+
+	private SecurityFilterChain getSecurityFilterChain(AssertableWebApplicationContext context) {
+		Filter springSecurityFilterChain = context.getBean(BeanIds.SPRING_SECURITY_FILTER_CHAIN, Filter.class);
+		FilterChainProxy filterChainProxy = getFilterChainProxy(springSecurityFilterChain);
+		SecurityFilterChain securityFilterChain = filterChainProxy.getFilterChains().get(0);
+		return securityFilterChain;
+	}
+
+	private FilterChainProxy getFilterChainProxy(Filter filter) {
+		if (filter instanceof FilterChainProxy filterChainProxy) {
+			return filterChainProxy;
+		}
+		if (filter instanceof CompositeFilter) {
+			List<?> filters = (List<?>) ReflectionTestUtils.getField(filter, "filters");
+			return (FilterChainProxy) filters.stream()
+				.filter(FilterChainProxy.class::isInstance)
+				.findFirst()
+				.orElseThrow();
+		}
+		throw new IllegalStateException("No FilterChainProxy found");
 	}
 
 	private boolean isEqual(ClientRegistration reg1, ClientRegistration reg2) {
@@ -244,20 +252,12 @@ class OAuth2WebSecurityConfigurationTests {
 
 	@Configuration(proxyBeanMethods = false)
 	@Import(ClientRegistrationRepositoryConfiguration.class)
-	@SuppressWarnings("deprecation")
-	static class TestWebSecurityConfigurerConfig
-			extends org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter {
-
-	}
-
-	@Configuration(proxyBeanMethods = false)
-	@Import(ClientRegistrationRepositoryConfiguration.class)
-	static class TestSecurityFilterChainConfig {
+	static class TestSecurityFilterChainConfiguration {
 
 		@Bean
 		SecurityFilterChain testSecurityFilterChain(HttpSecurity http) throws Exception {
-			return http.antMatcher("/**")
-				.authorizeRequests((authorize) -> authorize.anyRequest().authenticated())
+			return http.securityMatcher("/**")
+				.authorizeHttpRequests((authorize) -> authorize.anyRequest().authenticated())
 				.build();
 
 		}
