@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.boot.test.autoconfigure.web.reactive;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.autoconfigure.AutoConfiguration;
@@ -68,11 +67,10 @@ public class WebTestClientAutoConfiguration {
 	}
 
 	@Bean
-	@ConfigurationProperties(prefix = "spring.test.webtestclient")
+	@ConfigurationProperties("spring.test.webtestclient")
 	public SpringBootWebTestClientBuilderCustomizer springBootWebTestClientBuilderCustomizer(
 			ObjectProvider<CodecCustomizer> codecCustomizers) {
-		return new SpringBootWebTestClientBuilderCustomizer(
-				codecCustomizers.orderedStream().collect(Collectors.toList()));
+		return new SpringBootWebTestClientBuilderCustomizer(codecCustomizers.orderedStream().toList());
 	}
 
 }
