@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,8 @@
 
 package org.springframework.boot.configurationprocessor;
 
-import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.TypeElement;
@@ -45,12 +43,12 @@ import static org.assertj.core.api.Assertions.assertThat;
 class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTests {
 
 	@Test
-	void constructorParameterSimpleProperty() throws IOException {
+	void constructorParameterSimpleProperty() {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "theName");
 			assertThat(property.getName()).isEqualTo("theName");
-			assertThat(property.getSource()).hasToString("theName");
+			assertThat(property.getParameter()).hasToString("theName");
 			assertThat(property.getGetter().getSimpleName()).hasToString("getTheName");
 			assertThat(property.isProperty(metadataEnv)).isTrue();
 			assertThat(property.isNested(metadataEnv)).isFalse();
@@ -58,12 +56,12 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterNestedPropertySameClass() throws IOException {
+	void constructorParameterNestedPropertySameClass() {
 		process(ImmutableInnerClassProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableInnerClassProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "first");
 			assertThat(property.getName()).isEqualTo("first");
-			assertThat(property.getSource()).hasToString("first");
+			assertThat(property.getParameter()).hasToString("first");
 			assertThat(property.getGetter().getSimpleName()).hasToString("getFirst");
 			assertThat(property.isProperty(metadataEnv)).isFalse();
 			assertThat(property.isNested(metadataEnv)).isTrue();
@@ -71,12 +69,12 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterNestedPropertyWithAnnotation() throws IOException {
+	void constructorParameterNestedPropertyWithAnnotation() {
 		process(ImmutableInnerClassProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableInnerClassProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "third");
 			assertThat(property.getName()).isEqualTo("third");
-			assertThat(property.getSource()).hasToString("third");
+			assertThat(property.getParameter()).hasToString("third");
 			assertThat(property.getGetter().getSimpleName()).hasToString("getThird");
 			assertThat(property.isProperty(metadataEnv)).isFalse();
 			assertThat(property.isNested(metadataEnv)).isTrue();
@@ -84,12 +82,12 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterSimplePropertyWithNoAccessorShouldBeExposed() throws IOException {
+	void constructorParameterSimplePropertyWithNoAccessorShouldBeExposed() {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "counter");
 			assertThat(property.getName()).isEqualTo("counter");
-			assertThat(property.getSource()).hasToString("counter");
+			assertThat(property.getParameter()).hasToString("counter");
 			assertThat(property.getGetter()).isNull();
 			assertThat(property.isProperty(metadataEnv)).isTrue();
 			assertThat(property.isNested(metadataEnv)).isFalse();
@@ -97,7 +95,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterMetadataSimpleProperty() throws IOException {
+	void constructorParameterMetadataSimpleProperty() {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "counter");
@@ -111,7 +109,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterMetadataNestedGroup() throws IOException {
+	void constructorParameterMetadataNestedGroup() {
 		process(ImmutableInnerClassProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableInnerClassProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "first");
@@ -126,20 +124,20 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterDeprecatedPropertyOnGetter() throws IOException {
+	void constructorParameterDeprecatedPropertyOnGetter() {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ExecutableElement getter = getMethod(ownerElement, "isFlag");
 			VariableElement field = getField(ownerElement, "flag");
 			VariableElement constructorParameter = getConstructorParameter(ownerElement, "flag");
-			ConstructorParameterPropertyDescriptor property = new ConstructorParameterPropertyDescriptor(ownerElement,
-					null, constructorParameter, "flag", field.asType(), field, getter, null);
+			ConstructorParameterPropertyDescriptor property = new ConstructorParameterPropertyDescriptor("flag",
+					field.asType(), constructorParameter, ownerElement, getter, null, field);
 			assertItemMetadata(metadataEnv, property).isProperty().isDeprecatedWithNoInformation();
 		});
 	}
 
 	@Test
-	void constructorParameterPropertyWithDescription() throws IOException {
+	void constructorParameterPropertyWithDescription() {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "theName");
@@ -149,7 +147,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithDefaultValue() throws IOException {
+	void constructorParameterPropertyWithDefaultValue() {
 		process(ImmutableSimpleProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableSimpleProperties.class);
 			ConstructorParameterPropertyDescriptor property = createPropertyDescriptor(ownerElement, "theName");
@@ -158,7 +156,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithPrimitiveTypes() throws IOException {
+	void constructorParameterPropertyWithPrimitiveTypes() {
 		process(ImmutablePrimitiveProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutablePrimitiveProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "flag")).hasDefaultValue(false);
@@ -174,7 +172,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithPrimitiveTypesAndDefaultValues() throws IOException {
+	void constructorParameterPropertyWithPrimitiveTypesAndDefaultValues() {
 		process(ImmutablePrimitiveWithDefaultsProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutablePrimitiveWithDefaultsProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "flag")).hasDefaultValue(true);
@@ -191,7 +189,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithPrimitiveWrapperTypesAndDefaultValues() throws IOException {
+	void constructorParameterPropertyWithPrimitiveWrapperTypesAndDefaultValues() {
 		process(ImmutablePrimitiveWrapperWithDefaultsProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutablePrimitiveWrapperWithDefaultsProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "flag")).hasDefaultValue(true);
@@ -208,7 +206,7 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 	}
 
 	@Test
-	void constructorParameterPropertyWithCollectionTypesAndDefaultValues() throws IOException {
+	void constructorParameterPropertyWithCollectionTypesAndDefaultValues() {
 		process(ImmutableCollectionProperties.class, (roundEnv, metadataEnv) -> {
 			TypeElement ownerElement = roundEnv.getRootElement(ImmutableCollectionProperties.class);
 			assertItemMetadata(metadataEnv, createPropertyDescriptor(ownerElement, "names")).hasDefaultValue(null);
@@ -224,15 +222,15 @@ class ConstructorParameterPropertyDescriptorTests extends PropertyDescriptorTest
 		VariableElement field = getField(ownerElement, name);
 		ExecutableElement getter = getMethod(ownerElement, createAccessorMethodName("get", name));
 		ExecutableElement setter = getMethod(ownerElement, createAccessorMethodName("set", name));
-		return new ConstructorParameterPropertyDescriptor(ownerElement, null, constructorParameter, name,
-				field.asType(), field, getter, setter);
+		return new ConstructorParameterPropertyDescriptor(name, field.asType(), constructorParameter, ownerElement,
+				getter, setter, field);
 	}
 
 	private VariableElement getConstructorParameter(TypeElement ownerElement, String name) {
 		List<ExecutableElement> constructors = ElementFilter.constructorsIn(ownerElement.getEnclosedElements())
 			.stream()
 			.filter((constructor) -> !constructor.getParameters().isEmpty())
-			.collect(Collectors.toList());
+			.toList();
 		if (constructors.size() != 1) {
 			throw new IllegalStateException("No candidate constructor for " + ownerElement);
 		}
