@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,19 +17,16 @@
 package org.springframework.boot.gradle.tasks.bundling;
 
 import java.io.IOException;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
-import groovy.lang.Closure;
 import org.gradle.api.Action;
 import org.gradle.api.DefaultTask;
-import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
 import org.gradle.api.file.RegularFileProperty;
 import org.gradle.api.provider.ListProperty;
+import org.gradle.api.provider.MapProperty;
 import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFile;
@@ -52,6 +49,7 @@ import org.springframework.boot.buildpack.platform.docker.type.ImageName;
 import org.springframework.boot.buildpack.platform.docker.type.ImageReference;
 import org.springframework.boot.buildpack.platform.io.ZipFileTarArchive;
 import org.springframework.boot.gradle.util.VersionExtractor;
+import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 
 /**
@@ -66,58 +64,43 @@ import org.springframework.util.StringUtils;
  * @since 2.3.0
  */
 @DisableCachingByDefault
-public class BootBuildImage extends DefaultTask {
+public abstract class BootBuildImage extends DefaultTask {
 
-	private static final String BUILDPACK_JVM_VERSION_KEY = "BP_JVM_VERSION";
+	private final Property<PullPolicy> pullPolicy;
 
 	private final String projectName;
 
-	private final Property<String> projectVersion;
+	private final CacheSpec buildWorkspace;
 
-	private RegularFileProperty archiveFile;
+	private final CacheSpec buildCache;
 
-	private Property<JavaVersion> targetJavaVersion;
+	private final CacheSpec launchCache;
 
-	private String imageName;
-
-	private String builder;
-
-	private String runImage;
-
-	private Map<String, String> environment = new HashMap<>();
-
-	private boolean cleanCache;
-
-	private boolean verboseLogging;
-
-	private PullPolicy pullPolicy;
-
-	private boolean publish;
-
-	private final ListProperty<String> buildpacks;
-
-	private final ListProperty<String> bindings;
-
-	private String network;
-
-	private final ListProperty<String> tags;
-
-	private final CacheSpec buildCache = new CacheSpec();
-
-	private final CacheSpec launchCache = new CacheSpec();
-
-	private final DockerSpec docker = new DockerSpec();
+	private final DockerSpec docker;
 
 	public BootBuildImage() {
-		this.archiveFile = getProject().getObjects().fileProperty();
-		this.targetJavaVersion = getProject().getObjects().property(JavaVersion.class);
 		this.projectName = getProject().getName();
-		this.projectVersion = getProject().getObjects().property(String.class);
 		Project project = getProject();
-		this.projectVersion.set(getProject().provider(() -> project.getVersion().toString()));
-		this.buildpacks = getProject().getObjects().listProperty(String.class);
-		this.bindings = getProject().getObjects().listProperty(String.class);
-		this.tags = getProject().getObjects().listProperty(String.class);
+		Property<String> projectVersion = project.getObjects()
+			.property(String.class)
+			.convention(project.provider(() -> project.getVersion().toString()));
+		getImageName().convention(project.provider(() -> {
+			ImageName imageName = ImageName.of(this.projectName);
+			if ("unspecified".equals(projectVersion.get())) {
+				return ImageReference.of(imageName).toString();
+			}
+			return ImageReference.of(imageName, projectVersion.get()).toString();
+		}));
+		getTrustBuilder().convention((Boolean) null);
+		getCleanCache().convention(false);
+		getVerboseLogging().convention(false);
+		getPublish().convention(false);
+		this.buildWorkspace = getProject().getObjects().newInstance(CacheSpec.class);
+		this.buildCache = getProject().getObjects().newInstance(CacheSpec.class);
+		this.launchCache = getProject().getObjects().newInstance(CacheSpec.class);
+		this.docker = getProject().getObjects().newInstance(DockerSpec.class);
+		this.pullPolicy = getProject().getObjects().property(PullPolicy.class);
+		getSecurityOptions().convention((Iterable<? extends String>) null);
 	}
 
 	/**
@@ -126,20 +109,7 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@InputFile
 	@PathSensitive(PathSensitivity.RELATIVE)
-	public RegularFileProperty getArchiveFile() {
-		return this.archiveFile;
-	}
-
-	/**
-	 * Returns the target Java version of the project (e.g. as provided by the
-	 * {@code targetCompatibility} build property).
-	 * @return the target Java version
-	 */
-	@Input
-	@Optional
-	public Property<JavaVersion> getTargetJavaVersion() {
-		return this.targetJavaVersion;
-	}
+	public abstract RegularFileProperty getArchiveFile();
 
 	/**
 	 * Returns the name of the image that will be built. When {@code null}, the name will
@@ -149,18 +119,8 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public String getImageName() {
-		return determineImageReference().toString();
-	}
-
-	/**
-	 * Sets the name of the image that will be built.
-	 * @param imageName name of the image
-	 */
 	@Option(option = "imageName", description = "The name of the image to generate")
-	public void setImageName(String imageName) {
-		this.imageName = imageName;
-	}
+	public abstract Property<String> getImageName();
 
 	/**
 	 * Returns the builder that will be used to build the image. When {@code null}, the
@@ -169,18 +129,18 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public String getBuilder() {
-		return this.builder;
-	}
+	@Option(option = "builder", description = "The name of the builder image to use")
+	public abstract Property<String> getBuilder();
 
 	/**
-	 * Sets the builder that will be used to build the image.
-	 * @param builder the builder
+	 * Whether to treat the builder as trusted.
+	 * @return whether to trust the builder
+	 * @since 3.4.0
 	 */
-	@Option(option = "builder", description = "The name of the builder image to use")
-	public void setBuilder(String builder) {
-		this.builder = builder;
-	}
+	@Input
+	@Optional
+	@Option(option = "trustBuilder", description = "Consider the builder trusted")
+	public abstract Property<Boolean> getTrustBuilder();
 
 	/**
 	 * Returns the run image that will be included in the built image. When {@code null},
@@ -189,88 +149,32 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public String getRunImage() {
-		return this.runImage;
-	}
-
-	/**
-	 * Sets the run image that will be included in the built image.
-	 * @param runImage the run image
-	 */
 	@Option(option = "runImage", description = "The name of the run image to use")
-	public void setRunImage(String runImage) {
-		this.runImage = runImage;
-	}
+	public abstract Property<String> getRunImage();
 
 	/**
 	 * Returns the environment that will be used when building the image.
 	 * @return the environment
 	 */
 	@Input
-	public Map<String, String> getEnvironment() {
-		return this.environment;
-	}
-
-	/**
-	 * Sets the environment that will be used when building the image.
-	 * @param environment the environment
-	 */
-	public void setEnvironment(Map<String, String> environment) {
-		this.environment = environment;
-	}
-
-	/**
-	 * Add an entry to the environment that will be used when building the image.
-	 * @param name the name of the entry
-	 * @param value the value of the entry
-	 */
-	public void environment(String name, String value) {
-		this.environment.put(name, value);
-	}
-
-	/**
-	 * Adds entries to the environment that will be used when building the image.
-	 * @param entries the entries to add to the environment
-	 */
-	public void environment(Map<String, String> entries) {
-		this.environment.putAll(entries);
-	}
+	public abstract MapProperty<String, String> getEnvironment();
 
 	/**
 	 * Returns whether caches should be cleaned before packaging.
 	 * @return whether caches should be cleaned
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isCleanCache() {
-		return this.cleanCache;
-	}
-
-	/**
-	 * Sets whether caches should be cleaned before packaging.
-	 * @param cleanCache {@code true} to clean the cache, otherwise {@code false}.
-	 */
 	@Option(option = "cleanCache", description = "Clean caches before packaging")
-	public void setCleanCache(boolean cleanCache) {
-		this.cleanCache = cleanCache;
-	}
+	public abstract Property<Boolean> getCleanCache();
 
 	/**
 	 * Whether verbose logging should be enabled while building the image.
 	 * @return whether verbose logging should be enabled
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isVerboseLogging() {
-		return this.verboseLogging;
-	}
-
-	/**
-	 * Sets whether verbose logging should be enabled while building the image.
-	 * @param verboseLogging {@code true} to enable verbose logging, otherwise
-	 * {@code false}.
-	 */
-	public void setVerboseLogging(boolean verboseLogging) {
-		this.verboseLogging = verboseLogging;
-	}
+	public abstract Property<Boolean> getVerboseLogging();
 
 	/**
 	 * Returns image pull policy that will be used when building the image.
@@ -278,36 +182,27 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public PullPolicy getPullPolicy() {
+	@Option(option = "pullPolicy", description = "The image pull policy")
+	public Property<PullPolicy> getPullPolicy() {
 		return this.pullPolicy;
 	}
 
 	/**
 	 * Sets image pull policy that will be used when building the image.
-	 * @param pullPolicy image pull policy {@link PullPolicy}
+	 * @param pullPolicy the pull policy to use
 	 */
-	@Option(option = "pullPolicy", description = "The image pull policy")
-	public void setPullPolicy(PullPolicy pullPolicy) {
-		this.pullPolicy = pullPolicy;
+	public void setPullPolicy(String pullPolicy) {
+		getPullPolicy().set(PullPolicy.valueOf(pullPolicy));
 	}
 
 	/**
 	 * Whether the built image should be pushed to a registry.
 	 * @return whether the built image should be pushed
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isPublish() {
-		return this.publish;
-	}
-
-	/**
-	 * Sets whether the built image should be pushed to a registry.
-	 * @param publish {@code true} the push the built image to a registry. {@code false}.
-	 */
 	@Option(option = "publishImage", description = "Publish the built image to a registry")
-	public void setPublish(boolean publish) {
-		this.publish = publish;
-	}
+	public abstract Property<Boolean> getPublish();
 
 	/**
 	 * Returns the buildpacks that will be used when building the image.
@@ -315,33 +210,7 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public List<String> getBuildpacks() {
-		return this.buildpacks.getOrNull();
-	}
-
-	/**
-	 * Sets the buildpacks that will be used when building the image.
-	 * @param buildpacks the buildpack references
-	 */
-	public void setBuildpacks(List<String> buildpacks) {
-		this.buildpacks.set(buildpacks);
-	}
-
-	/**
-	 * Add an entry to the buildpacks that will be used when building the image.
-	 * @param buildpack the buildpack reference
-	 */
-	public void buildpack(String buildpack) {
-		this.buildpacks.add(buildpack);
-	}
-
-	/**
-	 * Adds entries to the buildpacks that will be used when building the image.
-	 * @param buildpacks the buildpack references
-	 */
-	public void buildpacks(List<String> buildpacks) {
-		this.buildpacks.addAll(buildpacks);
-	}
+	public abstract ListProperty<String> getBuildpacks();
 
 	/**
 	 * Returns the volume bindings that will be mounted to the container when building the
@@ -350,36 +219,7 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public List<String> getBindings() {
-		return this.bindings.getOrNull();
-	}
-
-	/**
-	 * Sets the volume bindings that will be mounted to the container when building the
-	 * image.
-	 * @param bindings the bindings
-	 */
-	public void setBindings(List<String> bindings) {
-		this.bindings.set(bindings);
-	}
-
-	/**
-	 * Add an entry to the volume bindings that will be mounted to the container when
-	 * building the image.
-	 * @param binding the binding
-	 */
-	public void binding(String binding) {
-		this.bindings.add(binding);
-	}
-
-	/**
-	 * Add entries to the volume bindings that will be mounted to the container when
-	 * building the image.
-	 * @param bindings the bindings
-	 */
-	public void bindings(List<String> bindings) {
-		this.bindings.addAll(bindings);
-	}
+	public abstract ListProperty<String> getBindings();
 
 	/**
 	 * Returns the tags that will be created for the built image.
@@ -387,33 +227,7 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public List<String> getTags() {
-		return this.tags.getOrNull();
-	}
-
-	/**
-	 * Sets the tags that will be created for the built image.
-	 * @param tags the tags
-	 */
-	public void setTags(List<String> tags) {
-		this.tags.set(tags);
-	}
-
-	/**
-	 * Add an entry to the tags that will be created for the built image.
-	 * @param tag the tag
-	 */
-	public void tag(String tag) {
-		this.tags.add(tag);
-	}
-
-	/**
-	 * Add entries to the tags that will be created for the built image.
-	 * @param tags the tags
-	 */
-	public void tags(List<String> tags) {
-		this.tags.addAll(tags);
-	}
+	public abstract ListProperty<String> getTags();
 
 	/**
 	 * Returns the network the build container will connect to.
@@ -421,17 +235,28 @@ public class BootBuildImage extends DefaultTask {
 	 */
 	@Input
 	@Optional
-	public String getNetwork() {
-		return this.network;
+	@Option(option = "network", description = "Connect detect and build containers to network")
+	public abstract Property<String> getNetwork();
+
+	/**
+	 * Returns the build temporary workspace that will be used when building the image.
+	 * @return the cache
+	 * @since 3.2.0
+	 */
+	@Nested
+	@Optional
+	public CacheSpec getBuildWorkspace() {
+		return this.buildWorkspace;
 	}
 
 	/**
-	 * Sets the network the build container will connect to.
-	 * @param network the network
+	 * Customizes the {@link CacheSpec} for the build temporary workspace using the given
+	 * {@code action}.
+	 * @param action the action
+	 * @since 3.2.0
 	 */
-	@Option(option = "network", description = "Connect detect and build containers to network")
-	public void setNetwork(String network) {
-		this.network = network;
+	public void buildWorkspace(Action<CacheSpec> action) {
+		action.execute(this.buildWorkspace);
 	}
 
 	/**
@@ -454,15 +279,6 @@ public class BootBuildImage extends DefaultTask {
 	}
 
 	/**
-	 * Customizes the {@link CacheSpec} for the build cache using the given
-	 * {@code closure}.
-	 * @param closure the closure
-	 */
-	public void buildCache(Closure<?> closure) {
-		buildCache(Closures.asAction(closure));
-	}
-
-	/**
 	 * Returns the launch cache that will be used when building the image.
 	 * @return the cache
 	 */
@@ -482,13 +298,45 @@ public class BootBuildImage extends DefaultTask {
 	}
 
 	/**
-	 * Customizes the {@link CacheSpec} for the launch cache using the given
-	 * {@code closure}.
-	 * @param closure the closure
+	 * Returns the date that will be used as the {@code Created} date of the image. When
+	 * {@code null}, a fixed date that enables build reproducibility will be used.
+	 * @return the created date
 	 */
-	public void launchCache(Closure<?> closure) {
-		launchCache(Closures.asAction(closure));
-	}
+	@Input
+	@Optional
+	@Option(option = "createdDate", description = "The date to use as the created date of the image")
+	public abstract Property<String> getCreatedDate();
+
+	/**
+	 * Returns the directory that contains application content in the image. When
+	 * {@code null}, a default location will be used.
+	 * @return the application directory
+	 */
+	@Input
+	@Optional
+	@Option(option = "applicationDirectory", description = "The directory containing application content in the image")
+	public abstract Property<String> getApplicationDirectory();
+
+	/**
+	 * Returns the security options that will be applied to the builder container.
+	 * @return the security options
+	 */
+	@Input
+	@Optional
+	@Option(option = "securityOptions", description = "Security options that will be applied to the builder container")
+	public abstract ListProperty<String> getSecurityOptions();
+
+	/**
+	 * Returns the platform (os/architecture/variant) that will be used for all pulled
+	 * images. When {@code null}, the system will choose a platform based on the host
+	 * operating system and architecture.
+	 * @return the image platform
+	 */
+	@Input
+	@Optional
+	@Option(option = "imagePlatform",
+			description = "The platform (os/architecture/variant) that will be used for all pulled images")
+	public abstract Property<String> getImagePlatform();
 
 	/**
 	 * Returns the Docker configuration the builder will use.
@@ -509,15 +357,6 @@ public class BootBuildImage extends DefaultTask {
 		action.execute(this.docker);
 	}
 
-	/**
-	 * Configures the Docker connection using the given {@code closure}.
-	 * @param closure the closure to apply
-	 * @since 2.4.0
-	 */
-	public void docker(Closure<?> closure) {
-		docker(Closures.asAction(closure));
-	}
-
 	@TaskAction
 	void buildImage() throws DockerEngineException, IOException {
 		Builder builder = new Builder(this.docker.asDockerConfiguration());
@@ -526,58 +365,56 @@ public class BootBuildImage extends DefaultTask {
 	}
 
 	BuildRequest createRequest() {
-		return customize(BuildRequest.of(determineImageReference(),
-				(owner) -> new ZipFileTarArchive(this.archiveFile.get().getAsFile(), owner)));
-	}
-
-	private ImageReference determineImageReference() {
-		if (StringUtils.hasText(this.imageName)) {
-			return ImageReference.of(this.imageName);
-		}
-		ImageName imageName = ImageName.of(this.projectName);
-		if ("unspecified".equals(this.projectVersion.get())) {
-			return ImageReference.of(imageName);
-		}
-		return ImageReference.of(imageName, this.projectVersion.get());
+		return customize(BuildRequest.of(getImageName().map(ImageReference::of).get(),
+				(owner) -> new ZipFileTarArchive(getArchiveFile().get().getAsFile(), owner)));
 	}
 
 	private BuildRequest customize(BuildRequest request) {
 		request = customizeBuilder(request);
+		if (getTrustBuilder().isPresent()) {
+			request = request.withTrustBuilder(getTrustBuilder().get());
+		}
 		request = customizeRunImage(request);
 		request = customizeEnvironment(request);
 		request = customizeCreator(request);
-		request = request.withCleanCache(this.cleanCache);
-		request = request.withVerboseLogging(this.verboseLogging);
+		request = request.withCleanCache(getCleanCache().get());
+		request = request.withVerboseLogging(getVerboseLogging().get());
 		request = customizePullPolicy(request);
-		request = customizePublish(request);
+		request = request.withPublish(getPublish().get());
 		request = customizeBuildpacks(request);
 		request = customizeBindings(request);
 		request = customizeTags(request);
 		request = customizeCaches(request);
-		request = request.withNetwork(this.network);
+		request = request.withNetwork(getNetwork().getOrNull());
+		request = customizeCreatedDate(request);
+		request = customizeApplicationDirectory(request);
+		request = customizeSecurityOptions(request);
+		if (getImagePlatform().isPresent()) {
+			request = request.withImagePlatform(getImagePlatform().get());
+		}
 		return request;
 	}
 
 	private BuildRequest customizeBuilder(BuildRequest request) {
-		if (StringUtils.hasText(this.builder)) {
-			return request.withBuilder(ImageReference.of(this.builder));
+		String builder = getBuilder().getOrNull();
+		if (StringUtils.hasText(builder)) {
+			return request.withBuilder(ImageReference.of(builder));
 		}
 		return request;
 	}
 
 	private BuildRequest customizeRunImage(BuildRequest request) {
-		if (StringUtils.hasText(this.runImage)) {
-			return request.withRunImage(ImageReference.of(this.runImage));
+		String runImage = getRunImage().getOrNull();
+		if (StringUtils.hasText(runImage)) {
+			return request.withRunImage(ImageReference.of(runImage));
 		}
 		return request;
 	}
 
 	private BuildRequest customizeEnvironment(BuildRequest request) {
-		if (this.environment != null && !this.environment.isEmpty()) {
-			request = request.withEnv(this.environment);
-		}
-		if (this.targetJavaVersion.isPresent() && !request.getEnv().containsKey(BUILDPACK_JVM_VERSION_KEY)) {
-			request = request.withEnv(BUILDPACK_JVM_VERSION_KEY, translateTargetJavaVersion());
+		Map<String, String> environment = getEnvironment().getOrNull();
+		if (!CollectionUtils.isEmpty(environment)) {
+			request = request.withEnv(environment);
 		}
 		return request;
 	}
@@ -591,42 +428,41 @@ public class BootBuildImage extends DefaultTask {
 	}
 
 	private BuildRequest customizePullPolicy(BuildRequest request) {
-		if (this.pullPolicy != null) {
-			request = request.withPullPolicy(this.pullPolicy);
+		PullPolicy pullPolicy = getPullPolicy().getOrNull();
+		if (pullPolicy != null) {
+			request = request.withPullPolicy(pullPolicy);
 		}
 		return request;
 	}
 
-	private BuildRequest customizePublish(BuildRequest request) {
-		request = request.withPublish(this.publish);
-		return request;
-	}
-
 	private BuildRequest customizeBuildpacks(BuildRequest request) {
-		List<String> buildpacks = this.buildpacks.getOrNull();
-		if (buildpacks != null && !buildpacks.isEmpty()) {
-			return request.withBuildpacks(buildpacks.stream().map(BuildpackReference::of).collect(Collectors.toList()));
+		List<String> buildpacks = getBuildpacks().getOrNull();
+		if (!CollectionUtils.isEmpty(buildpacks)) {
+			return request.withBuildpacks(buildpacks.stream().map(BuildpackReference::of).toList());
 		}
 		return request;
 	}
 
 	private BuildRequest customizeBindings(BuildRequest request) {
-		List<String> bindings = this.bindings.getOrNull();
-		if (bindings != null && !bindings.isEmpty()) {
-			return request.withBindings(bindings.stream().map(Binding::of).collect(Collectors.toList()));
+		List<String> bindings = getBindings().getOrNull();
+		if (!CollectionUtils.isEmpty(bindings)) {
+			return request.withBindings(bindings.stream().map(Binding::of).toList());
 		}
 		return request;
 	}
 
 	private BuildRequest customizeTags(BuildRequest request) {
-		List<String> tags = this.tags.getOrNull();
-		if (tags != null && !tags.isEmpty()) {
-			return request.withTags(tags.stream().map(ImageReference::of).collect(Collectors.toList()));
+		List<String> tags = getTags().getOrNull();
+		if (!CollectionUtils.isEmpty(tags)) {
+			return request.withTags(tags.stream().map(ImageReference::of).toList());
 		}
 		return request;
 	}
 
 	private BuildRequest customizeCaches(BuildRequest request) {
+		if (this.buildWorkspace.asCache() != null) {
+			request = request.withBuildWorkspace((this.buildWorkspace.asCache()));
+		}
 		if (this.buildCache.asCache() != null) {
 			request = request.withBuildCache(this.buildCache.asCache());
 		}
@@ -636,8 +472,30 @@ public class BootBuildImage extends DefaultTask {
 		return request;
 	}
 
-	private String translateTargetJavaVersion() {
-		return this.targetJavaVersion.get().getMajorVersion() + ".*";
+	private BuildRequest customizeCreatedDate(BuildRequest request) {
+		String createdDate = getCreatedDate().getOrNull();
+		if (createdDate != null) {
+			return request.withCreatedDate(createdDate);
+		}
+		return request;
+	}
+
+	private BuildRequest customizeApplicationDirectory(BuildRequest request) {
+		String applicationDirectory = getApplicationDirectory().getOrNull();
+		if (applicationDirectory != null) {
+			return request.withApplicationDirectory(applicationDirectory);
+		}
+		return request;
+	}
+
+	private BuildRequest customizeSecurityOptions(BuildRequest request) {
+		if (getSecurityOptions().isPresent()) {
+			List<String> securityOptions = getSecurityOptions().getOrNull();
+			if (securityOptions != null) {
+				return request.withSecurityOptions(securityOptions);
+			}
+		}
+		return request;
 	}
 
 }
