@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.springframework.boot.loader.tools.layer;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.loader.tools.Layer;
 import org.springframework.util.Assert;
@@ -48,15 +47,15 @@ public class IncludeExcludeContentSelector<T> implements ContentSelector<T> {
 
 	public <S> IncludeExcludeContentSelector(Layer layer, List<S> includes, List<S> excludes,
 			Function<S, ContentFilter<T>> filterFactory) {
-		Assert.notNull(layer, "Layer must not be null");
-		Assert.notNull(filterFactory, "FilterFactory must not be null");
+		Assert.notNull(layer, "'layer' must not be null");
+		Assert.notNull(filterFactory, "'filterFactory' must not be null");
 		this.layer = layer;
 		this.includes = (includes != null) ? adapt(includes, filterFactory) : Collections.emptyList();
 		this.excludes = (excludes != null) ? adapt(excludes, filterFactory) : Collections.emptyList();
 	}
 
 	private <S> List<ContentFilter<T>> adapt(List<S> list, Function<S, ContentFilter<T>> mapper) {
-		return list.stream().map(mapper).collect(Collectors.toList());
+		return list.stream().map(mapper).toList();
 	}
 
 	@Override
