@@ -95,7 +95,7 @@ class CustomLayersProvider {
 		if (layerOrder == null) {
 			return Collections.emptyList();
 		}
-		return getChildNodeTextContent(layerOrder, "layer").stream().map(Layer::new).collect(Collectors.toList());
+		return getChildNodeTextContent(layerOrder, "layer").stream().map(Layer::new).toList();
 	}
 
 	private <T> List<ContentSelector<T>> getSelectors(Element root, String elementName,
@@ -108,8 +108,8 @@ class CustomLayersProvider {
 		NodeList children = element.getChildNodes();
 		for (int i = 0; i < children.getLength(); i++) {
 			Node child = children.item(i);
-			if (child instanceof Element) {
-				ContentSelector<T> selector = selectorFactory.apply((Element) child);
+			if (child instanceof Element childElement) {
+				ContentSelector<T> selector = selectorFactory.apply(childElement);
 				selectors.add(selector);
 			}
 		}
@@ -123,21 +123,23 @@ class CustomLayersProvider {
 		return new IncludeExcludeContentSelector<>(layer, includes, excludes, filterFactory);
 	}
 
-	private <T> ContentSelector<Library> getLibrarySelector(Element element,
+	private ContentSelector<Library> getLibrarySelector(Element element,
 			Function<String, ContentFilter<Library>> filterFactory) {
 		Layer layer = new Layer(element.getAttribute("layer"));
 		List<String> includes = getChildNodeTextContent(element, "include");
 		List<String> excludes = getChildNodeTextContent(element, "exclude");
 		Element includeModuleDependencies = getChildElement(element, "includeModuleDependencies");
 		Element excludeModuleDependencies = getChildElement(element, "excludeModuleDependencies");
-		List<ContentFilter<Library>> includeFilters = includes.stream().map(filterFactory).collect(Collectors.toList());
+		List<ContentFilter<Library>> includeFilters = includes.stream()
+			.map(filterFactory)
+			.collect(Collectors.toCollection(ArrayList::new));
 		if (includeModuleDependencies != null) {
-			includeFilters = new ArrayList<>(includeFilters);
 			includeFilters.add(Library::isLocal);
 		}
-		List<ContentFilter<Library>> excludeFilters = excludes.stream().map(filterFactory).collect(Collectors.toList());
+		List<ContentFilter<Library>> excludeFilters = excludes.stream()
+			.map(filterFactory)
+			.collect(Collectors.toCollection(ArrayList::new));
 		if (excludeModuleDependencies != null) {
-			excludeFilters = new ArrayList<>(excludeFilters);
 			excludeFilters.add(Library::isLocal);
 		}
 		return new IncludeExcludeContentSelector<>(layer, includeFilters, excludeFilters);
