@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 
@@ -40,6 +39,7 @@ import org.springframework.boot.context.properties.bind.PlaceholdersResolver;
 import org.springframework.boot.context.properties.source.ConfigurationPropertyName;
 import org.springframework.boot.context.properties.source.ConfigurationPropertySource;
 import org.springframework.boot.logging.DeferredLogFactory;
+import org.springframework.core.convert.ConversionService;
 import org.springframework.core.log.LogMessage;
 import org.springframework.util.ObjectUtils;
 
@@ -60,24 +60,29 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 
 	private final ConfigurableBootstrapContext bootstrapContext;
 
+	private final ConversionService conversionService;
+
 	/**
 	 * Create a new {@link ConfigDataEnvironmentContributors} instance.
 	 * @param logFactory the log factory
 	 * @param bootstrapContext the bootstrap context
 	 * @param contributors the initial set of contributors
+	 * @param conversionService the conversion service to use
 	 */
 	ConfigDataEnvironmentContributors(DeferredLogFactory logFactory, ConfigurableBootstrapContext bootstrapContext,
-			List<ConfigDataEnvironmentContributor> contributors) {
+			List<ConfigDataEnvironmentContributor> contributors, ConversionService conversionService) {
 		this.logger = logFactory.getLog(getClass());
 		this.bootstrapContext = bootstrapContext;
-		this.root = ConfigDataEnvironmentContributor.of(contributors);
+		this.root = ConfigDataEnvironmentContributor.of(contributors, conversionService);
+		this.conversionService = conversionService;
 	}
 
 	private ConfigDataEnvironmentContributors(Log logger, ConfigurableBootstrapContext bootstrapContext,
-			ConfigDataEnvironmentContributor root) {
+			ConfigDataEnvironmentContributor root, ConversionService conversionService) {
 		this.logger = logger;
 		this.bootstrapContext = bootstrapContext;
 		this.root = root;
+		this.conversionService = conversionService;
 	}
 
 	/**
@@ -105,7 +110,7 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 			if (contributor.getKind() == Kind.UNBOUND_IMPORT) {
 				ConfigDataEnvironmentContributor bound = contributor.withBoundProperties(result, activationContext);
 				result = new ConfigDataEnvironmentContributors(this.logger, this.bootstrapContext,
-						result.getRoot().withReplacement(contributor, bound));
+						result.getRoot().withReplacement(contributor, bound), this.conversionService);
 				continue;
 			}
 			ConfigDataLocationResolverContext locationResolverContext = new ContributorConfigDataLocationResolverContext(
@@ -119,7 +124,7 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 			ConfigDataEnvironmentContributor contributorAndChildren = contributor.withChildren(importPhase,
 					asContributors(imported));
 			result = new ConfigDataEnvironmentContributors(this.logger, this.bootstrapContext,
-					result.getRoot().withReplacement(contributor, contributorAndChildren));
+					result.getRoot().withReplacement(contributor, contributorAndChildren), this.conversionService);
 			processed++;
 		}
 	}
@@ -130,7 +135,7 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 		}
 		StringBuilder message = new StringBuilder();
 		message.append("Imported " + results.size() + " resource" + ((results.size() != 1) ? "s " : " "));
-		message.append(results.stream().map(ConfigDataResolutionResult::getResource).collect(Collectors.toList()));
+		message.append(results.stream().map(ConfigDataResolutionResult::getResource).toList());
 		return message;
 	}
 
@@ -162,12 +167,13 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 			ConfigDataResource resource = resolutionResult.getResource();
 			boolean profileSpecific = resolutionResult.isProfileSpecific();
 			if (data.getPropertySources().isEmpty()) {
-				contributors.add(ConfigDataEnvironmentContributor.ofEmptyLocation(location, profileSpecific));
+				contributors.add(ConfigDataEnvironmentContributor.ofEmptyLocation(location, profileSpecific,
+						this.conversionService));
 			}
 			else {
 				for (int i = data.getPropertySources().size() - 1; i >= 0; i--) {
 					contributors.add(ConfigDataEnvironmentContributor.ofUnboundImport(location, resource,
-							profileSpecific, data, i));
+							profileSpecific, data, i, this.conversionService));
 				}
 			}
 		});
@@ -215,7 +221,7 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 		Iterable<ConfigurationPropertySource> sources = () -> getBinderSources(
 				filter.and((contributor) -> failOnInactiveSource || contributor.isActive(activationContext)));
 		PlaceholdersResolver placeholdersResolver = new ConfigDataEnvironmentContributorPlaceholdersResolver(this.root,
-				activationContext, null, failOnInactiveSource);
+				activationContext, null, failOnInactiveSource, this.conversionService);
 		BindHandler bindHandler = !failOnInactiveSource ? null : new InactiveSourceChecker(activationContext);
 		return new Binder(sources, placeholdersResolver, null, null, bindHandler);
 	}
@@ -327,7 +333,7 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 		/**
 		 * Throw an exception if an inactive contributor contains a bound value.
 		 */
-		FAIL_ON_BIND_TO_INACTIVE_SOURCE;
+		FAIL_ON_BIND_TO_INACTIVE_SOURCE
 
 	}
 
