@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,6 +21,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.EventListener;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -30,10 +31,9 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import javax.servlet.Filter;
-import javax.servlet.MultipartConfigElement;
-import javax.servlet.Servlet;
-
+import jakarta.servlet.Filter;
+import jakarta.servlet.MultipartConfigElement;
+import jakarta.servlet.Servlet;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
@@ -68,13 +68,13 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 	/**
 	 * Seen bean instances or bean names.
 	 */
-	private final Set<Object> seen = new HashSet<>();
+	private final Seen seen = new Seen();
 
 	private final MultiValueMap<Class<?>, ServletContextInitializer> initializers;
 
 	private final List<Class<? extends ServletContextInitializer>> initializerTypes;
 
-	private List<ServletContextInitializer> sortedList;
+	private final List<ServletContextInitializer> sortedList;
 
 	@SafeVarargs
 	@SuppressWarnings("varargs")
@@ -85,11 +85,10 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 				: Collections.singletonList(ServletContextInitializer.class);
 		addServletContextInitializerBeans(beanFactory);
 		addAdaptableBeans(beanFactory);
-		List<ServletContextInitializer> sortedInitializers = this.initializers.values()
+		this.sortedList = this.initializers.values()
 			.stream()
 			.flatMap((value) -> value.stream().sorted(AnnotationAwareOrderComparator.INSTANCE))
-			.collect(Collectors.toList());
-		this.sortedList = Collections.unmodifiableList(sortedInitializers);
+			.toList();
 		logMappings(this.initializers);
 	}
 
@@ -104,21 +103,21 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 
 	private void addServletContextInitializerBean(String beanName, ServletContextInitializer initializer,
 			ListableBeanFactory beanFactory) {
-		if (initializer instanceof ServletRegistrationBean) {
-			Servlet source = ((ServletRegistrationBean<?>) initializer).getServlet();
-			addServletContextInitializerBean(Servlet.class, beanName, initializer, beanFactory, source);
+		if (initializer instanceof ServletRegistrationBean<?> servletRegistrationBean) {
+			Servlet source = servletRegistrationBean.getServlet();
+			addServletContextInitializerBean(Servlet.class, beanName, servletRegistrationBean, beanFactory, source);
 		}
-		else if (initializer instanceof FilterRegistrationBean) {
-			Filter source = ((FilterRegistrationBean<?>) initializer).getFilter();
-			addServletContextInitializerBean(Filter.class, beanName, initializer, beanFactory, source);
+		else if (initializer instanceof FilterRegistrationBean<?> filterRegistrationBean) {
+			Filter source = filterRegistrationBean.getFilter();
+			addServletContextInitializerBean(Filter.class, beanName, filterRegistrationBean, beanFactory, source);
 		}
-		else if (initializer instanceof DelegatingFilterProxyRegistrationBean) {
-			String source = ((DelegatingFilterProxyRegistrationBean) initializer).getTargetBeanName();
-			addServletContextInitializerBean(Filter.class, beanName, initializer, beanFactory, source);
+		else if (initializer instanceof DelegatingFilterProxyRegistrationBean registrationBean) {
+			String source = registrationBean.getTargetBeanName();
+			addServletContextInitializerBean(Filter.class, beanName, registrationBean, beanFactory, source);
 		}
-		else if (initializer instanceof ServletListenerRegistrationBean) {
-			EventListener source = ((ServletListenerRegistrationBean<?>) initializer).getListener();
-			addServletContextInitializerBean(EventListener.class, beanName, initializer, beanFactory, source);
+		else if (initializer instanceof ServletListenerRegistrationBean<?> registrationBean) {
+			EventListener source = registrationBean.getListener();
+			addServletContextInitializerBean(EventListener.class, beanName, registrationBean, beanFactory, source);
 		}
 		else {
 			addServletContextInitializerBean(ServletContextInitializer.class, beanName, initializer, beanFactory,
@@ -131,7 +130,7 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 		this.initializers.add(type, initializer);
 		if (source != null) {
 			// Mark the underlying source as seen in case it wraps an existing bean
-			this.seen.add(source);
+			this.seen.add(type, source);
 		}
 		if (logger.isTraceEnabled()) {
 			String resourceDescription = getResourceDescription(beanName, beanFactory);
@@ -142,8 +141,7 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 	}
 
 	private String getResourceDescription(String beanName, ListableBeanFactory beanFactory) {
-		if (beanFactory instanceof BeanDefinitionRegistry) {
-			BeanDefinitionRegistry registry = (BeanDefinitionRegistry) beanFactory;
+		if (beanFactory instanceof BeanDefinitionRegistry registry) {
 			return registry.getBeanDefinition(beanName).getResourceDescription();
 		}
 		return "unknown";
@@ -177,7 +175,7 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 		for (Entry<String, B> entry : entries) {
 			String beanName = entry.getKey();
 			B bean = entry.getValue();
-			if (this.seen.add(bean)) {
+			if (this.seen.add(type, bean)) {
 				// One that we haven't already seen
 				RegistrationBean registration = adapter.createRegistrationBean(beanName, bean, entries.size());
 				int order = getOrder(bean);
@@ -201,17 +199,17 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 	}
 
 	private <T> List<Entry<String, T>> getOrderedBeansOfType(ListableBeanFactory beanFactory, Class<T> type) {
-		return getOrderedBeansOfType(beanFactory, type, Collections.emptySet());
+		return getOrderedBeansOfType(beanFactory, type, Seen.empty());
 	}
 
 	private <T> List<Entry<String, T>> getOrderedBeansOfType(ListableBeanFactory beanFactory, Class<T> type,
-			Set<?> excludes) {
+			Seen seen) {
 		String[] names = beanFactory.getBeanNamesForType(type, true, false);
 		Map<String, T> map = new LinkedHashMap<>();
 		for (String name : names) {
-			if (!excludes.contains(name) && !ScopedProxyUtils.isScopedTarget(name)) {
+			if (!seen.contains(type, name) && !ScopedProxyUtils.isScopedTarget(name)) {
 				T bean = beanFactory.getBean(name, type);
-				if (!excludes.contains(bean)) {
+				if (!seen.contains(type, bean)) {
 					map.put(name, bean);
 				}
 			}
@@ -288,7 +286,7 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 	/**
 	 * {@link RegistrationBeanAdapter} for {@link Filter} beans.
 	 */
-	private static class FilterRegistrationBeanAdapter implements RegistrationBeanAdapter<Filter> {
+	private static final class FilterRegistrationBeanAdapter implements RegistrationBeanAdapter<Filter> {
 
 		@Override
 		public RegistrationBean createRegistrationBean(String name, Filter source, int totalNumberOfSourceBeans) {
@@ -302,12 +300,43 @@ public class ServletContextInitializerBeans extends AbstractCollection<ServletCo
 	/**
 	 * {@link RegistrationBeanAdapter} for certain {@link EventListener} beans.
 	 */
-	private static class ServletListenerRegistrationBeanAdapter implements RegistrationBeanAdapter<EventListener> {
+	private static final class ServletListenerRegistrationBeanAdapter
+			implements RegistrationBeanAdapter<EventListener> {
 
 		@Override
 		public RegistrationBean createRegistrationBean(String name, EventListener source,
 				int totalNumberOfSourceBeans) {
 			return new ServletListenerRegistrationBean<>(source);
+		}
+
+	}
+
+	private static final class Seen {
+
+		private final Map<Class<?>, Set<Object>> seen = new HashMap<>();
+
+		boolean add(Class<?> type, Object object) {
+			if (contains(type, object)) {
+				return false;
+			}
+			return this.seen.computeIfAbsent(type, (ignore) -> new HashSet<>()).add(object);
+		}
+
+		boolean contains(Class<?> type, Object object) {
+			if (this.seen.isEmpty()) {
+				return false;
+			}
+			// If it has been directly seen, or the implemented ServletContextInitializer
+			// has been seen already
+			if (type != ServletContextInitializer.class
+					&& this.seen.getOrDefault(type, Collections.emptySet()).contains(object)) {
+				return true;
+			}
+			return this.seen.getOrDefault(ServletContextInitializer.class, Collections.emptySet()).contains(object);
+		}
+
+		static Seen empty() {
+			return new Seen();
 		}
 
 	}
