@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,7 +28,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import org.springframework.boot.DefaultBootstrapContext;
@@ -38,13 +37,17 @@ import org.springframework.boot.context.config.ConfigDataEnvironmentContributors
 import org.springframework.boot.context.properties.bind.BindException;
 import org.springframework.boot.context.properties.bind.Binder;
 import org.springframework.boot.logging.DeferredLogFactory;
+import org.springframework.core.convert.ConversionService;
+import org.springframework.core.convert.support.DefaultConversionService;
 import org.springframework.core.io.DefaultResourceLoader;
+import org.springframework.core.io.support.SpringFactoriesLoader;
 import org.springframework.mock.env.MockEnvironment;
 import org.springframework.mock.env.MockPropertySource;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.assertArg;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
@@ -63,41 +66,35 @@ class ConfigDataEnvironmentContributorsTests {
 
 	private static final ConfigDataLocation LOCATION_2 = ConfigDataLocation.of("location2");
 
-	private DeferredLogFactory logFactory = Supplier::get;
+	private final DeferredLogFactory logFactory = Supplier::get;
 
-	private DefaultBootstrapContext bootstrapContext = new DefaultBootstrapContext();
+	private final DefaultBootstrapContext bootstrapContext = new DefaultBootstrapContext();
 
-	private MockEnvironment environment;
-
-	private Binder binder;
+	private final ConversionService conversionService = DefaultConversionService.getSharedInstance();
 
 	private ConfigDataImporter importer;
 
 	private ConfigDataActivationContext activationContext;
 
-	@Captor
-	private ArgumentCaptor<ConfigDataLocationResolverContext> locationResolverContext;
-
-	@Captor
-	private ArgumentCaptor<ConfigDataLoaderContext> loaderContext;
-
 	@BeforeEach
 	void setup() {
-		this.environment = new MockEnvironment();
-		this.binder = Binder.get(this.environment);
+		MockEnvironment environment = new MockEnvironment();
+		Binder binder = Binder.get(environment);
 		ConfigDataLocationResolvers resolvers = new ConfigDataLocationResolvers(this.logFactory, this.bootstrapContext,
-				this.binder, new DefaultResourceLoader(getClass().getClassLoader()));
+				binder, new DefaultResourceLoader(getClass().getClassLoader()),
+				SpringFactoriesLoader.forDefaultResourceLocation(getClass().getClassLoader()));
 		ConfigDataLoaders loaders = new ConfigDataLoaders(this.logFactory, this.bootstrapContext,
-				getClass().getClassLoader());
+				SpringFactoriesLoader.forDefaultResourceLocation());
 		this.importer = new ConfigDataImporter(this.logFactory, ConfigDataNotFoundAction.FAIL, resolvers, loaders);
 		this.activationContext = new ConfigDataActivationContext(CloudPlatform.KUBERNETES, null);
 	}
 
 	@Test
 	void createCreatesWithInitialContributors() {
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(contributor));
+				this.bootstrapContext, List.of(contributor), this.conversionService);
 		Iterator<ConfigDataEnvironmentContributor> iterator = contributors.iterator();
 		assertThat(iterator.next()).isSameAs(contributor);
 		assertThat(iterator.next().getKind()).isEqualTo(Kind.ROOT);
@@ -106,9 +103,9 @@ class ConfigDataEnvironmentContributorsTests {
 	@Test
 	void withProcessedImportsWhenHasNoUnprocessedImportsReturnsSameInstance() {
 		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor
-			.ofExisting(new MockPropertySource());
+			.ofExisting(new MockPropertySource(), this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(contributor));
+				this.bootstrapContext, List.of(contributor), this.conversionService);
 		ConfigDataEnvironmentContributors withProcessedImports = contributors.withProcessedImports(this.importer,
 				this.activationContext);
 		assertThat(withProcessedImports).isSameAs(contributors);
@@ -117,16 +114,17 @@ class ConfigDataEnvironmentContributorsTests {
 	@Test
 	void withProcessedImportsResolvesAndLoads() {
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
+		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a"), false),
-				new ConfigData(Arrays.asList(propertySource)));
+				new ConfigData(List.of(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(contributor));
+				this.bootstrapContext, List.of(contributor), this.conversionService);
 		ConfigDataEnvironmentContributors withProcessedImports = contributors.withProcessedImports(this.importer,
 				this.activationContext);
 		Iterator<ConfigDataEnvironmentContributor> iterator = withProcessedImports.iterator();
@@ -139,24 +137,25 @@ class ConfigDataEnvironmentContributorsTests {
 	@Test
 	void withProcessedImportsResolvesAndLoadsChainedImports() {
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> initialLocations = Arrays.asList(LOCATION_1);
+		List<ConfigDataLocation> initialLocations = Collections.singletonList(LOCATION_1);
 		MockPropertySource initialPropertySource = new MockPropertySource();
 		initialPropertySource.setProperty("spring.config.import", "location2");
 		Map<ConfigDataResolutionResult, ConfigData> initialImported = new LinkedHashMap<>();
 		initialImported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a"), false),
-				new ConfigData(Arrays.asList(initialPropertySource)));
+				new ConfigData(List.of(initialPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(initialLocations)))
 			.willReturn(initialImported);
-		List<ConfigDataLocation> secondLocations = Arrays.asList(LOCATION_2);
+		List<ConfigDataLocation> secondLocations = Collections.singletonList(LOCATION_2);
 		MockPropertySource secondPropertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> secondImported = new LinkedHashMap<>();
 		secondImported.put(new ConfigDataResolutionResult(LOCATION_2, new TestConfigDataResource("b"), false),
-				new ConfigData(Arrays.asList(secondPropertySource)));
+				new ConfigData(List.of(secondPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(secondLocations)))
 			.willReturn(secondImported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(contributor));
+				this.bootstrapContext, List.of(contributor), this.conversionService);
 		ConfigDataEnvironmentContributors withProcessedImports = contributors.withProcessedImports(this.importer,
 				this.activationContext);
 		Iterator<ConfigDataEnvironmentContributor> iterator = withProcessedImports.iterator();
@@ -172,49 +171,55 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource existingPropertySource = new MockPropertySource();
 		existingPropertySource.setProperty("test", "springboot");
 		ConfigDataEnvironmentContributor existingContributor = ConfigDataEnvironmentContributor
-			.ofExisting(existingPropertySource);
+			.ofExisting(existingPropertySource, this.conversionService);
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
+		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a'"), false),
-				new ConfigData(Arrays.asList(propertySource)));
+				new ConfigData(List.of(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(existingContributor, contributor));
+				this.bootstrapContext, Arrays.asList(existingContributor, contributor), this.conversionService);
 		contributors.withProcessedImports(this.importer, this.activationContext);
-		then(this.importer).should().resolveAndLoad(any(), this.locationResolverContext.capture(), any(), any());
-		ConfigDataLocationResolverContext context = this.locationResolverContext.getValue();
-		assertThat(context.getBinder().bind("test", String.class).get()).isEqualTo("springboot");
+		then(this.importer).should()
+			.resolveAndLoad(any(),
+					assertArg((context) -> assertThat(context.getBinder().bind("test", String.class).get())
+						.isEqualTo("springboot")),
+					any(), any());
 	}
 
 	@Test
 	void withProcessedImportsProvidesLocationResolverContextWithAccessToParent() {
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> initialLocations = Arrays.asList(LOCATION_1);
+		List<ConfigDataLocation> initialLocations = Collections.singletonList(LOCATION_1);
 		MockPropertySource initialPropertySource = new MockPropertySource();
 		initialPropertySource.setProperty("spring.config.import", "location2");
 		Map<ConfigDataResolutionResult, ConfigData> initialImported = new LinkedHashMap<>();
 		initialImported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a"), false),
-				new ConfigData(Arrays.asList(initialPropertySource)));
+				new ConfigData(List.of(initialPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(initialLocations)))
 			.willReturn(initialImported);
-		List<ConfigDataLocation> secondLocations = Arrays.asList(LOCATION_2);
+		List<ConfigDataLocation> secondLocations = Collections.singletonList(LOCATION_2);
 		MockPropertySource secondPropertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> secondImported = new LinkedHashMap<>();
 		secondImported.put(new ConfigDataResolutionResult(LOCATION_2, new TestConfigDataResource("b"), false),
-				new ConfigData(Arrays.asList(secondPropertySource)));
+				new ConfigData(List.of(secondPropertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(secondLocations)))
 			.willReturn(secondImported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(contributor));
+				this.bootstrapContext, List.of(contributor), this.conversionService);
+		ArgumentCaptor<ConfigDataLocationResolverContext> locationResolverContext = ArgumentCaptor
+			.forClass(ConfigDataLocationResolverContext.class);
 		contributors.withProcessedImports(this.importer, this.activationContext);
 		then(this.importer).should()
-			.resolveAndLoad(any(), this.locationResolverContext.capture(), any(), eq(secondLocations));
-		ConfigDataLocationResolverContext context = this.locationResolverContext.getValue();
+			.resolveAndLoad(any(), locationResolverContext.capture(), any(), eq(secondLocations));
+		ConfigDataLocationResolverContext context = locationResolverContext.getValue();
 		assertThat(context.getParent()).hasToString("a");
 	}
 
@@ -223,22 +228,24 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource existingPropertySource = new MockPropertySource();
 		existingPropertySource.setProperty("test", "springboot");
 		ConfigDataEnvironmentContributor existingContributor = ConfigDataEnvironmentContributor
-			.ofExisting(existingPropertySource);
+			.ofExisting(existingPropertySource, this.conversionService);
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
+		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a'"), false),
-				new ConfigData(Arrays.asList(propertySource)));
+				new ConfigData(List.of(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(existingContributor, contributor));
+				this.bootstrapContext, Arrays.asList(existingContributor, contributor), this.conversionService);
 		contributors.withProcessedImports(this.importer, this.activationContext);
-		then(this.importer).should().resolveAndLoad(any(), this.locationResolverContext.capture(), any(), any());
-		ConfigDataLocationResolverContext context = this.locationResolverContext.getValue();
-		assertThat(context.getBootstrapContext()).isSameAs(this.bootstrapContext);
+		then(this.importer).should()
+			.resolveAndLoad(any(),
+					assertArg((context) -> assertThat(context.getBootstrapContext()).isSameAs(this.bootstrapContext)),
+					any(), any());
 	}
 
 	@Test
@@ -246,31 +253,34 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource existingPropertySource = new MockPropertySource();
 		existingPropertySource.setProperty("test", "springboot");
 		ConfigDataEnvironmentContributor existingContributor = ConfigDataEnvironmentContributor
-			.ofExisting(existingPropertySource);
+			.ofExisting(existingPropertySource, this.conversionService);
 		this.importer = mock(ConfigDataImporter.class);
-		List<ConfigDataLocation> locations = Arrays.asList(LOCATION_1);
+		List<ConfigDataLocation> locations = Collections.singletonList(LOCATION_1);
 		MockPropertySource propertySource = new MockPropertySource();
 		Map<ConfigDataResolutionResult, ConfigData> imported = new LinkedHashMap<>();
 		imported.put(new ConfigDataResolutionResult(LOCATION_1, new TestConfigDataResource("a'"), false),
-				new ConfigData(Arrays.asList(propertySource)));
+				new ConfigData(List.of(propertySource)));
 		given(this.importer.resolveAndLoad(eq(this.activationContext), any(), any(), eq(locations)))
 			.willReturn(imported);
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofInitialImport(LOCATION_1,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(existingContributor, contributor));
+				this.bootstrapContext, Arrays.asList(existingContributor, contributor), this.conversionService);
 		contributors.withProcessedImports(this.importer, this.activationContext);
-		then(this.importer).should().resolveAndLoad(any(), any(), this.loaderContext.capture(), any());
-		ConfigDataLoaderContext context = this.loaderContext.getValue();
-		assertThat(context.getBootstrapContext()).isSameAs(this.bootstrapContext);
+		then(this.importer).should()
+			.resolveAndLoad(any(), any(),
+					assertArg((context) -> assertThat(context.getBootstrapContext()).isSameAs(this.bootstrapContext)),
+					any());
 	}
 
 	@Test
 	void getBinderProvidesBinder() {
 		MockPropertySource propertySource = new MockPropertySource();
 		propertySource.setProperty("test", "springboot");
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(contributor));
+				this.bootstrapContext, List.of(contributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("springboot");
 	}
@@ -285,7 +295,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("one");
 	}
@@ -301,7 +311,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("two");
 	}
@@ -311,9 +321,10 @@ class ConfigDataEnvironmentContributorsTests {
 		MockPropertySource propertySource = new MockPropertySource();
 		propertySource.setProperty("test", "${other}");
 		propertySource.setProperty("other", "springboot");
-		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource);
+		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofExisting(propertySource,
+				this.conversionService);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(contributor));
+				this.bootstrapContext, List.of(contributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("springboot");
 	}
@@ -330,7 +341,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext);
 		assertThat(binder.bind("test", String.class).get()).isEqualTo("two");
 	}
@@ -346,7 +357,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext, BinderOption.FAIL_ON_BIND_TO_INACTIVE_SOURCE);
 		assertThatExceptionOfType(BindException.class).isThrownBy(() -> binder.bind("test", String.class))
 			.satisfies((ex) -> assertThat(ex.getCause()).isInstanceOf(InactiveConfigDataAccessException.class));
@@ -363,7 +374,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext, BinderOption.FAIL_ON_BIND_TO_INACTIVE_SOURCE);
 		assertThatExceptionOfType(BindException.class).isThrownBy(() -> binder.bind("test", String.class))
 			.satisfies((ex) -> assertThat(ex.getCause()).isInstanceOf(InactiveConfigDataAccessException.class));
@@ -381,7 +392,7 @@ class ConfigDataEnvironmentContributorsTests {
 		ConfigDataEnvironmentContributor firstContributor = createBoundImportContributor(configData, 0);
 		ConfigDataEnvironmentContributor secondContributor = createBoundImportContributor(configData, 1);
 		ConfigDataEnvironmentContributors contributors = new ConfigDataEnvironmentContributors(this.logFactory,
-				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor));
+				this.bootstrapContext, Arrays.asList(firstContributor, secondContributor), this.conversionService);
 		Binder binder = contributors.getBinder(this.activationContext, BinderOption.FAIL_ON_BIND_TO_INACTIVE_SOURCE);
 		assertThatExceptionOfType(BindException.class).isThrownBy(() -> binder.bind("test", String.class))
 			.satisfies((ex) -> assertThat(ex.getCause()).isInstanceOf(InactiveConfigDataAccessException.class));
@@ -390,7 +401,7 @@ class ConfigDataEnvironmentContributorsTests {
 	private ConfigDataEnvironmentContributor createBoundImportContributor(ConfigData configData,
 			int propertySourceIndex) {
 		ConfigDataEnvironmentContributor contributor = ConfigDataEnvironmentContributor.ofUnboundImport(null, null,
-				false, configData, propertySourceIndex);
+				false, configData, propertySourceIndex, this.conversionService);
 		return contributor.withBoundProperties(Collections.singleton(contributor), null);
 	}
 
