@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@ package org.springframework.boot.context.properties.source;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Locale;
 
 import org.junit.jupiter.api.Test;
 
@@ -42,7 +42,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameShouldNotBeNull() {
 		assertThatIllegalArgumentException().isThrownBy(() -> ConfigurationPropertyName.of(null))
-			.withMessageContaining("Name must not be null");
+			.withMessageContaining("'name' must not be null");
 	}
 
 	@Test
@@ -86,8 +86,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenSimple() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("name");
-		assertThat(name.toString()).isEqualTo("name");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("name");
+		assertThat(name.getNumberOfElements()).isOne();
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("name");
 		assertThat(name.isIndexed(0)).isFalse();
 	}
@@ -95,8 +95,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenStartsWithNumber() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("1foo");
-		assertThat(name.toString()).isEqualTo("1foo");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("1foo");
+		assertThat(name.getNumberOfElements()).isOne();
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("1foo");
 		assertThat(name.isIndexed(0)).isFalse();
 	}
@@ -104,7 +104,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenRunOnAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[bar]");
-		assertThat(name.toString()).isEqualTo("foo[bar]");
+		assertThat(name).hasToString("foo[bar]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -114,7 +114,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDotOnAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar");
-		assertThat(name.toString()).isEqualTo("foo.bar");
+		assertThat(name).hasToString("foo.bar");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -124,7 +124,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDotAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.[bar]");
-		assertThat(name.toString()).isEqualTo("foo[bar]");
+		assertThat(name).hasToString("foo[bar]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -134,7 +134,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDoubleRunOnAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[bar]baz");
-		assertThat(name.toString()).isEqualTo("foo[bar].baz");
+		assertThat(name).hasToString("foo[bar].baz");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.getElement(2, Form.ORIGINAL)).isEqualTo("baz");
@@ -146,7 +146,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenDoubleDotAndAssociative() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.[bar].baz");
-		assertThat(name.toString()).isEqualTo("foo[bar].baz");
+		assertThat(name).hasToString("foo[bar].baz");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bar");
 		assertThat(name.getElement(2, Form.ORIGINAL)).isEqualTo("baz");
@@ -179,7 +179,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWhenNestedBrackets() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[a[c][[b]ar]]");
-		assertThat(name.toString()).isEqualTo("foo[a[c][[b]ar]]");
+		assertThat(name).hasToString("foo[a[c][[b]ar]]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("a[c][[b]ar]");
 	}
@@ -194,7 +194,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWithWhitespaceInAssociativeElement() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[b a r]");
-		assertThat(name.toString()).isEqualTo("foo[b a r]");
+		assertThat(name).hasToString("foo[b a r]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("b a r");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -204,7 +204,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofNameWithUppercaseInAssociativeElement() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo[BAR]");
-		assertThat(name.toString()).isEqualTo("foo[BAR]");
+		assertThat(name).hasToString("foo[BAR]");
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("foo");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("BAR");
 		assertThat(name.isIndexed(0)).isFalse();
@@ -214,8 +214,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void ofWhenNameIsEmptyShouldReturnEmptyName() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("");
-		assertThat(name.toString()).isEqualTo("");
-		assertThat(name.append("foo").toString()).isEqualTo("foo");
+		assertThat(name.toString()).isEmpty();
+		assertThat(name.append("foo")).hasToString("foo");
 	}
 
 	@Test
@@ -239,7 +239,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void adaptWhenElementValueProcessorIsNullShouldAdapt() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("foo", '.', null);
-		assertThat(name.toString()).isEqualTo("foo");
+		assertThat(name).hasToString("foo");
 	}
 
 	@Test
@@ -256,7 +256,7 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("f");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("br");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("br");
-		assertThat(name.toString()).isEqualTo("f.br");
+		assertThat(name).hasToString("f.br");
 	}
 
 	@Test
@@ -266,7 +266,7 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("f-_o");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("br");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("b_r");
-		assertThat(name.toString()).isEqualTo("f-o.br");
+		assertThat(name).hasToString("f-o.br");
 	}
 
 	@Test
@@ -276,32 +276,32 @@ class ConfigurationPropertyNameTests {
 		assertThat(name.getElement(0, Form.ORIGINAL)).isEqualTo("fOo");
 		assertThat(name.getElement(1, Form.UNIFORM)).isEqualTo("bar");
 		assertThat(name.getElement(1, Form.ORIGINAL)).isEqualTo("bAr");
-		assertThat(name.toString()).isEqualTo("foo.bar");
+		assertThat(name).hasToString("foo.bar");
 	}
 
 	@Test
 	void adaptShouldUseElementValueProcessor() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("FOO_THE-BAR", '_',
 				(c) -> c.toString().replace("-", ""));
-		assertThat(name.toString()).isEqualTo("foo.thebar");
+		assertThat(name).hasToString("foo.thebar");
 	}
 
 	@Test
 	void adaptShouldSupportIndexedElements() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("foo", '.');
-		assertThat(name.toString()).isEqualTo("foo");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("foo");
+		assertThat(name.getNumberOfElements()).isOne();
 		name = ConfigurationPropertyName.adapt("[foo]", '.');
-		assertThat(name.toString()).isEqualTo("[foo]");
-		assertThat(name.getNumberOfElements()).isEqualTo(1);
+		assertThat(name).hasToString("[foo]");
+		assertThat(name.getNumberOfElements()).isOne();
 		name = ConfigurationPropertyName.adapt("foo.bar", '.');
-		assertThat(name.toString()).isEqualTo("foo.bar");
+		assertThat(name).hasToString("foo.bar");
 		assertThat(name.getNumberOfElements()).isEqualTo(2);
 		name = ConfigurationPropertyName.adapt("foo[foo.bar]", '.');
-		assertThat(name.toString()).isEqualTo("foo[foo.bar]");
+		assertThat(name).hasToString("foo[foo.bar]");
 		assertThat(name.getNumberOfElements()).isEqualTo(2);
 		name = ConfigurationPropertyName.adapt("foo.[bar].baz", '.');
-		assertThat(name.toString()).isEqualTo("foo[bar].baz");
+		assertThat(name).hasToString("foo[bar].baz");
 		assertThat(name.getNumberOfElements()).isEqualTo(3);
 	}
 
@@ -342,8 +342,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void getLastElementWhenEmptyShouldReturnEmptyString() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.EMPTY;
-		assertThat(name.getLastElement(Form.ORIGINAL)).isEqualTo("");
-		assertThat(name.getLastElement(Form.UNIFORM)).isEqualTo("");
+		assertThat(name.getLastElement(Form.ORIGINAL)).isEmpty();
+		assertThat(name.getLastElement(Form.UNIFORM)).isEmpty();
 	}
 
 	@Test
@@ -395,8 +395,8 @@ class ConfigurationPropertyNameTests {
 
 	@Test
 	void getNumberOfElementsShouldReturnNumberOfElement() {
-		assertThat(ConfigurationPropertyName.of("").getNumberOfElements()).isEqualTo(0);
-		assertThat(ConfigurationPropertyName.of("x").getNumberOfElements()).isEqualTo(1);
+		assertThat(ConfigurationPropertyName.of("").getNumberOfElements()).isZero();
+		assertThat(ConfigurationPropertyName.of("x").getNumberOfElements()).isOne();
 		assertThat(ConfigurationPropertyName.of("x.y").getNumberOfElements()).isEqualTo(2);
 		assertThat(ConfigurationPropertyName.of("x[0].y").getNumberOfElements()).isEqualTo(3);
 	}
@@ -404,14 +404,14 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void appendWhenNotIndexedShouldAppendWithDot() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo");
-		assertThat(name.append("bar").toString()).isEqualTo("foo.bar");
+		assertThat(name.append("bar")).hasToString("foo.bar");
 	}
 
 	@Test
 	void appendWhenIndexedShouldAppendWithBrackets() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo").append("[bar]");
 		assertThat(name.isLastElementIndexed()).isTrue();
-		assertThat(name.toString()).isEqualTo("foo[bar]");
+		assertThat(name).hasToString("foo[bar]");
 	}
 
 	@Test
@@ -424,7 +424,7 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void appendWhenElementNameMultiDotShouldAppend() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo").append("bar.baz");
-		assertThat(name.toString()).isEqualTo("foo.bar.baz");
+		assertThat(name).hasToString("foo.bar.baz");
 		assertThat(name.getNumberOfElements()).isEqualTo(3);
 	}
 
@@ -470,8 +470,8 @@ class ConfigurationPropertyNameTests {
 	@Test
 	void chopWhenLessThenSizeShouldReturnChopped() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
-		assertThat(name.chop(1).toString()).isEqualTo("foo");
-		assertThat(name.chop(2).toString()).isEqualTo("foo.bar");
+		assertThat(name.chop(1)).hasToString("foo");
+		assertThat(name.chop(2)).hasToString("foo.bar");
 	}
 
 	@Test
@@ -491,6 +491,21 @@ class ConfigurationPropertyNameTests {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar.baz");
 		assertThat(name.subName(1)).hasToString("bar.baz");
 		assertThat(name.subName(2)).hasToString("baz");
+	}
+
+	@Test
+	void subNameOfAdaptedNameWhenOffsetLessThanSizeShouldReturnSubName() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("MY_LOGGING_LEVEL_ONE", '_');
+		assertThat(name.subName(1)).hasToString("logging.level.one");
+		assertThat(name.subName(2)).hasToString("level.one");
+	}
+
+	@Test
+	void subNameOfAdaptedNameWithValueProcessorWhenOffsetLessThanSizeShouldReturnSubName() {
+		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("MY_LOGGING_LEVEL_ONE", '_',
+				(value) -> value.toString().toLowerCase(Locale.ENGLISH));
+		assertThat(name.subName(1)).hasToString("logging.level.one");
+		assertThat(name.subName(2)).hasToString("level.one");
 	}
 
 	@Test
@@ -589,8 +604,8 @@ class ConfigurationPropertyNameTests {
 		names.add(ConfigurationPropertyName.of("foo.baz"));
 		names.add(ConfigurationPropertyName.of("foo"));
 		Collections.sort(names);
-		assertThat(names.stream().map(ConfigurationPropertyName::toString).collect(Collectors.toList()))
-			.containsExactly("foo", "foo[2]", "foo[10]", "foo.bar", "foo.bard", "foo.baz");
+		assertThat(names.stream().map(ConfigurationPropertyName::toString).toList()).containsExactly("foo", "foo[2]",
+				"foo[10]", "foo.bar", "foo.bard", "foo.baz");
 	}
 
 	@Test
@@ -598,19 +613,19 @@ class ConfigurationPropertyNameTests {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("spring.web.resources.chain.strategy.content");
 		ConfigurationPropertyName other = ConfigurationPropertyName
 			.of("spring.web.resources.chain.strategy.content.enabled");
-		assertThat(name.compareTo(other)).isLessThan(0);
+		assertThat(name).isLessThan(other);
 	}
 
 	@Test
 	void toStringShouldBeLowerCaseDashed() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.adapt("fOO.b_-a-r", '.');
-		assertThat(name.toString()).isEqualTo("foo.b-a-r");
+		assertThat(name).hasToString("foo.b-a-r");
 	}
 
 	@Test
 	void toStringFromOfShouldBeLowerCaseDashed() {
 		ConfigurationPropertyName name = ConfigurationPropertyName.of("foo.bar-baz");
-		assertThat(name.toString()).isEqualTo("foo.bar-baz");
+		assertThat(name).hasToString("foo.bar-baz");
 	}
 
 	@Test
@@ -631,17 +646,17 @@ class ConfigurationPropertyNameTests {
 		ConfigurationPropertyName n14 = ConfigurationPropertyName.of("[1]");
 		ConfigurationPropertyName n15 = ConfigurationPropertyName.of("[-1]");
 		assertThat((Object) n01).isEqualTo(n01);
-		assertThat(n01.hashCode()).isEqualTo(n01.hashCode());
+		assertThat(n01).hasSameHashCodeAs(n01);
 		assertThat((Object) n01).isEqualTo(n02);
-		assertThat(n01.hashCode()).isEqualTo(n02.hashCode());
+		assertThat(n01).hasSameHashCodeAs(n02);
 		assertThat((Object) n01).isEqualTo(n03);
-		assertThat(n01.hashCode()).isEqualTo(n03.hashCode());
+		assertThat(n01).hasSameHashCodeAs(n03);
 		assertThat((Object) n01).isEqualTo(n04);
-		assertThat(n01.hashCode()).isEqualTo(n04.hashCode());
+		assertThat(n01).hasSameHashCodeAs(n04);
 		assertThat((Object) n11).isEqualTo(n03);
-		assertThat(n11.hashCode()).isEqualTo(n03.hashCode());
+		assertThat(n11).hasSameHashCodeAs(n03);
 		assertThat((Object) n03).isEqualTo(n11);
-		assertThat(n03.hashCode()).isEqualTo(n11.hashCode());
+		assertThat(n03).hasSameHashCodeAs(n11);
 		assertThat((Object) n01).isNotEqualTo(n05);
 		assertThat((Object) n01).isNotEqualTo(n06);
 		assertThat((Object) n07).isNotEqualTo(n08);
@@ -656,7 +671,7 @@ class ConfigurationPropertyNameTests {
 		ConfigurationPropertyName n1 = ConfigurationPropertyName.of("nested");
 		ConfigurationPropertyName n2 = ConfigurationPropertyName.EMPTY.append("nested");
 		ConfigurationPropertyName n3 = ConfigurationPropertyName.of("nested.value").getParent();
-		assertThat(n1.hashCode()).isEqualTo(n2.hashCode()).isEqualTo(n3.hashCode());
+		assertThat(n1).hasSameHashCodeAs(n2).hasSameHashCodeAs(n3);
 		assertThat(n1).isEqualTo(n2).isEqualTo(n3);
 	}
 
